--- a/directbak.yaml
+++ b/directbak.yaml
@@ -2496,6 +2496,7 @@ payload:
   - '+.31mada.com'
   - '+.31martech.com'
   - '+.31meijia.com'
+  - '+.31ml.com'
   - '+.31mold.com'
   - '+.31myhome.com'
   - '+.31pump.com'
@@ -2821,7 +2822,6 @@ payload:
   - '+.3618med.com'
   - '+.361a.com'
   - '+.361dai.com'
-  - '+.361games.com'
   - '+.361mogame.com'
   - '+.361shipin.com'
   - '+.361sport.com'
@@ -5515,6 +5515,7 @@ payload:
   - '+.7724.com'
   - '+.7724yx.com'
   - '+.7725.com'
+  - '+.77275.cc'
   - '+.7729.com'
   - '+.77313.com'
   - '+.77348k.com'
@@ -6142,6 +6143,7 @@ payload:
   - '+.8cheche.com'
   - '+.8cname.com'
   - '+.8cnet.com'
+  - '+.8d7hhh8x.com'
   - '+.8da.com'
   - '+.8ddao.com'
   - '+.8dexpress.com'
@@ -6578,7 +6580,6 @@ payload:
   - '+.94mxd.com'
   - '+.94nw.com'
   - '+.94php.com'
-  - '+.94pm.com'
   - '+.94q.com'
   - '+.94qy.com'
   - '+.94rp.com'
@@ -7274,6 +7275,7 @@ payload:
   - '+.adarrive.com'
   - '+.adaxin.com'
   - '+.adbats.com'
+  - '+.adbkwai.com'
   - '+.adbxb.com'
   - '+.adc-expo.com'
   - '+.adccd.com'
@@ -8299,7 +8301,6 @@ payload:
   - '+.amobbs.com'
   - '+.amoe.cc'
   - '+.amon.org'
-  - '+.amon1997.com'
   - '+.ampc8.com'
   - '+.ampcn.com'
   - '+.amplesky.com'
@@ -8338,6 +8339,7 @@ payload:
   - '+.ancun.com'
   - '+.andaike.com'
   - '+.andan.me'
+  - '+.andcaifu.com'
   - '+.andeyi1688.com'
   - '+.andhj.com'
   - '+.andisoon.com'
@@ -8377,7 +8379,6 @@ payload:
   - '+.angogotech.net'
   - '+.angruo.com'
   - '+.angrymiao.com'
-  - '+.anguanjia.com'
   - '+.angui.org'
   - '+.angwei.net'
   - '+.anhei2.com'
@@ -8540,7 +8541,6 @@ payload:
   - '+.anyv.net'
   - '+.anyview.net'
   - '+.anyway.fm'
-  - '+.anywlan.com'
   - '+.anywood.com'
   - '+.anyxz.com'
   - '+.anzerclub.com'
@@ -9235,6 +9235,7 @@ payload:
   - '+.awtmt.com'
   - '+.awuming.com'
   - '+.awx1.com'
+  - '+.awyyzx.com'
   - '+.ax2nc4.ren'
   - '+.ax630.com'
   - '+.axatp.com'
@@ -10448,6 +10449,7 @@ payload:
   - '+.biaoqingmm.com'
   - '+.biaotukeji.com'
   - '+.biaoyi.com'
+  - '+.biaozhangshi.com'
   - '+.biaozhiku.com'
   - '+.biaozhun.org'
   - '+.biaozhun8.com'
@@ -11129,7 +11131,6 @@ payload:
   - '+.bling.link'
   - '+.blingabc.com'
   - '+.blingclubs.com'
-  - '+.blinkol.com'
   - '+.blissmall.net'
   - '+.blizzardcn.com'
   - '+.bln7.com'
@@ -13090,6 +13091,7 @@ payload:
   - '+.cgvoo.com'
   - '+.cgwang.com'
   - '+.cgwell.com'
+  - '+.cgwenjian.com'
   - '+.cgwic.com'
   - '+.cgws.com'
   - '+.cgxc.cc'
@@ -13871,6 +13873,7 @@ payload:
   - '+.chinagiftsfair.com'
   - '+.chinagoldcoin.net'
   - '+.chinagoldgroup.com'
+  - '+.chinagov.pw'
   - '+.chinagp.net'
   - '+.chinagps.cc'
   - '+.chinagrid.net'
@@ -14504,6 +14507,7 @@ payload:
   - '+.chunjiws.com'
   - '+.chunmi.com'
   - '+.chunqiuwang.com'
+  - '+.chunquff.com'
   - '+.chunshuitang.com'
   - '+.chunshuizhijia.com'
   - '+.chunsuns.com'
@@ -16010,7 +16014,6 @@ payload:
   - '+.cppwh.com'
   - '+.cps1688.com'
   - '+.cps800.com'
-  - '+.cps88.cc'
   - '+.cpsbeijing.org'
   - '+.cpsenglish.com'
   - '+.cptae.com'
@@ -16430,7 +16433,6 @@ payload:
   - '+.cszx.com'
   - '+.cszybdf.com'
   - '+.cszykt.com'
-  - '+.cszywl.net'
   - '+.cszzjc.com'
   - '+.ct-cdm.com'
   - '+.ct-laser.com'
@@ -18608,7 +18610,6 @@ payload:
   - '+.dongge.com'
   - '+.donghaifunds.com'
   - '+.donghao.org'
-  - '+.donghongqiao.com'
   - '+.donghulvdao.com'
   - '+.dongjinyu.com'
   - '+.dongjun.cc'
@@ -18941,6 +18942,7 @@ payload:
   - '+.dsfof.com'
   - '+.dshigao.com'
   - '+.dshrc.com'
+  - '+.dsitni.com'
   - '+.dskb.co'
   - '+.dskystudio.com'
   - '+.dslbuy.com'
@@ -20219,6 +20221,7 @@ payload:
   - '+.ename.com'
   - '+.ename.net'
   - '+.enappstore.com'
+  - '+.enaw-almg3.com'
   - '+.enbowang.com'
   - '+.enbrands.com'
   - '+.enec.net'
@@ -20592,7 +20595,6 @@ payload:
   - '+.everstar.xyz'
   - '+.everstray.com'
   - '+.everturst.com'
-  - '+.evervc.com'
   - '+.everybodygame.com'
   - '+.everychina.com'
   - '+.everydo.com'
@@ -22107,6 +22109,7 @@ payload:
   - '+.fsecity.com'
   - '+.fsesa.com'
   - '+.fsfund.com'
+  - '+.fsgangtong.com'
   - '+.fsgejian.com'
   - '+.fsggb.com'
   - '+.fsghgt.com'
@@ -22646,7 +22649,6 @@ payload:
   - '+.gao7gao8.com'
   - '+.gaobata.com'
   - '+.gaobei.com'
-  - '+.gaobiao.net'
   - '+.gaocangyun.com'
   - '+.gaocegege.com'
   - '+.gaochengnews.net'
@@ -23158,6 +23160,7 @@ payload:
   - '+.ggo.net'
   - '+.ggqule.com'
   - '+.ggqx.com'
+  - '+.ggrsc.com'
   - '+.ggsafe.com'
   - '+.ggsq.cc'
   - '+.ggt1024.com'
@@ -24113,7 +24116,6 @@ payload:
   - '+.gugud.com'
   - '+.gugudang.com'
   - '+.guguread.com'
-  - '+.gugutown.com'
   - '+.guguyu.com'
   - '+.guhai66.com'
   - '+.guhuozaiol.com'
@@ -24132,7 +24134,6 @@ payload:
   - '+.guihuayun.com'
   - '+.guiji.com'
   - '+.guijinshu.com'
-  - '+.guiliangtechnology.com'
   - '+.guilin.la'
   - '+.guilinhd.com'
   - '+.guilinlife.com'
@@ -24754,6 +24755,7 @@ payload:
   - '+.haiboyi.com'
   - '+.haicent.com'
   - '+.haichangchina.com'
+  - '+.haichuanmei.com'
   - '+.haichufang.com'
   - '+.haici.com'
   - '+.haicj.com'
@@ -28043,6 +28045,7 @@ payload:
   - '+.hyznjs.com'
   - '+.hyzqxsb.com'
   - '+.hz-etest.com'
+  - '+.hz-expo.com'
   - '+.hz-gn.com'
   - '+.hz-hospital.com'
   - '+.hz-winone.com'
@@ -29345,6 +29348,7 @@ payload:
   - '+.incoto.com'
   - '+.incsg.com'
   - '+.ind-app-comp.com'
+  - '+.ind-map.com'
   - '+.ind9ed.com'
   - '+.indexedu.com'
   - '+.indexedu.net'
@@ -29364,7 +29368,6 @@ payload:
   - '+.inetgoes.com'
   - '+.inetnoc.com'
   - '+.inewhope.com'
-  - '+.inewland.com'
   - '+.inewoffice.com'
   - '+.inezha.com'
   - '+.infarts.net'
@@ -29974,7 +29977,6 @@ payload:
   - '+.itkeyword.com'
   - '+.itkoudai.com'
   - '+.itlu.org'
-  - '+.itmamba.net'
   - '+.itmanbu.com'
   - '+.itmastergame.com'
   - '+.itmind.net'
@@ -30183,6 +30185,7 @@ payload:
   - '+.ixiqi.com'
   - '+.ixiqin.com'
   - '+.ixiumei.com'
+  - '+.ixiway.com'
   - '+.ixixili.com'
   - '+.ixizang.com'
   - '+.ixmu.net'
@@ -32535,6 +32538,7 @@ payload:
   - '+.jxxhdn.com'
   - '+.jxxhsd.com'
   - '+.jxxyqm.com'
+  - '+.jxycdx.com'
   - '+.jxyrzdh.com'
   - '+.jxysyz.com'
   - '+.jxyworld.com'
@@ -34767,7 +34771,6 @@ payload:
   - '+.lejingxuan.com'
   - '+.lejj.com'
   - '+.leju.com'
-  - '+.lejucaifu.com'
   - '+.lejuliang.com'
   - '+.lejunwl.com'
   - '+.lekannews.com'
@@ -35324,7 +35327,6 @@ payload:
   - '+.lingkou.com'
   - '+.lingla.com'
   - '+.linglingkaimen.com'
-  - '+.linglong.space'
   - '+.linglongart.com'
   - '+.linglongtech.com'
   - '+.lingmovie.com'
@@ -36606,6 +36608,7 @@ payload:
   - '+.lyjiayi.com'
   - '+.lyjunshi.com'
   - '+.lyjxwl.com'
+  - '+.lykxm.com'
   - '+.lylryy.com'
   - '+.lymil.com'
   - '+.lynkco.com'
@@ -37717,6 +37720,7 @@ payload:
   - '+.mgpyh.com'
   - '+.mgsdk.com'
   - '+.mgslb.com'
+  - '+.mgsyiv.com'
   - '+.mgtv.com'
   - '+.mgw999.com'
   - '+.mgwxw.com'
@@ -38939,7 +38943,6 @@ payload:
   - '+.mwjx.com'
   - '+.mwrf.net'
   - '+.mwrfchina.org'
-  - '+.mwrftech.com'
   - '+.mwryx.com'
   - '+.mwyzhcdn.com'
   - '+.mx-industry.com'
@@ -39771,6 +39774,7 @@ payload:
   - '+.nfcic.com'
   - '+.nfcmag.com'
   - '+.nffund.com'
+  - '+.nfg02df.com'
   - '+.nflchina.com'
   - '+.nfmedia.com'
   - '+.nfmrtfv.com'
@@ -41351,13 +41355,7 @@ payload:
   - '+.papa21.com'
   - '+.papa91.com'
   - '+.papaao.com'
-  - '+.papaao1.com'
-  - '+.papaao2.com'
-  - '+.papaao4.com'
-  - '+.papaao5.com'
-  - '+.papaao6.com'
   - '+.papaao7.com'
-  - '+.papaao8.com'
   - '+.papajohnshanghai.com'
   - '+.papapoi.com'
   - '+.papaquan.com'
@@ -43131,6 +43129,7 @@ payload:
   - '+.qifake.com'
   - '+.qifandianlansh.com'
   - '+.qifangw.com'
+  - '+.qifawang.com'
   - '+.qifeiye.com'
   - '+.qifub.com'
   - '+.qifuedu.com'
@@ -44766,7 +44765,6 @@ payload:
   - '+.rkvir.com'
   - '+.rl-consult.com'
   - '+.rlair.net'
-  - '+.rlbl888.com'
   - '+.rlkj.com'
   - '+.rlkj.net'
   - '+.rlnk.net'
@@ -45725,6 +45723,7 @@ payload:
   - '+.sdklh.com'
   - '+.sdknext.com'
   - '+.sdksrv.com'
+  - '+.sdlgjycm.com'
   - '+.sdlgzy.com'
   - '+.sdlinqu.com'
   - '+.sdljwomen.com'
@@ -49599,6 +49598,7 @@ payload:
   - '+.t262.com'
   - '+.t2cn.com'
   - '+.t3315.com'
+  - '+.t4lover.com'
   - '+.t5.work'
   - '+.t56.net'
   - '+.t56jy.net'
@@ -51920,6 +51920,7 @@ payload:
   - '+.txffp.com'
   - '+.txfund.com'
   - '+.txga.com'
+  - '+.txh00.com'
   - '+.txianning.com'
   - '+.txip8.com'
   - '+.txitech.com'
@@ -52425,6 +52426,7 @@ payload:
   - '+.unicon-hibar.com'
   - '+.unicornacg.com'
   - '+.unifull.com'
+  - '+.unifycarbon.com'
   - '+.unigress.com'
   - '+.uninf.com'
   - '+.union-4.com'
@@ -53303,6 +53305,7 @@ payload:
   - '+.vpquc9rn.com'
   - '+.vps.im'
   - '+.vps.sh'
+  - '+.vps123.cc'
   - '+.vps234.com'
   - '+.vpsaa.com'
   - '+.vpsaa.net'
@@ -53427,6 +53430,7 @@ payload:
   - '+.vvipcdn.com'
   - '+.vvjob.com'
   - '+.vvkaoyan.com'
+  - '+.vvkw.com'
   - '+.vvl.cc'
   - '+.vvmeiju.com'
   - '+.vvo2o.com'
@@ -55708,7 +55712,6 @@ payload:
   - '+.wtbds.com'
   - '+.wtcxs.com'
   - '+.wtdex.com'
-  - '+.wtdlq.com'
   - '+.wtdms.com'
   - '+.wting.info'
   - '+.wtmmn.com'
@@ -57331,6 +57334,7 @@ payload:
   - '+.xingtac.com'
   - '+.xingtai123.com'
   - '+.xingtangzp.com'
+  - '+.xingtongbo.com'
   - '+.xingtouzi.com'
   - '+.xingtu.com'
   - '+.xinguad.com'
@@ -57602,7 +57606,6 @@ payload:
   - '+.xiuimg.com'
   - '+.xiujiadian.com'
   - '+.xiulian.com'
-  - '+.xiulishanzhuang.com'
   - '+.xiuluowang.com'
   - '+.xiulv.com'
   - '+.xiumb.com'
@@ -58291,7 +58294,6 @@ payload:
   - '+.xueyanshe.com'
   - '+.xueyiyun.com'
   - '+.xueyou.org'
-  - '+.xueyouyoo.com'
   - '+.xueyuanjun.com'
   - '+.xuezhouyi.com'
   - '+.xuezishi.net'
@@ -58542,6 +58544,7 @@ payload:
   - '+.xyffsb.com'
   - '+.xyfw.org'
   - '+.xygmed.com'
+  - '+.xyh001.com'
   - '+.xyhc.com'
   - '+.xyhis.com'
   - '+.xyhlcd.com'
@@ -59761,6 +59764,7 @@ payload:
   - '+.yiwaiart.com'
   - '+.yiwangdujin.com'
   - '+.yiwanggo.net'
+  - '+.yiwangtui.com'
   - '+.yiwanzhushou.com'
   - '+.yiwealth.com'
   - '+.yiweb.com'
@@ -63785,7 +63789,6 @@ payload:
   - '+.ztzhsq.com'
   - '+.ztzy.com'
   - '+.zuan-cheng.com'
-  - '+.zuanbi8.com'
   - '+.zuanchuang.org'
   - '+.zuanchuang9.com'
   - '+.zuanke8.com'
