--- a/directbak.yaml
+++ b/directbak.yaml
@@ -9652,6 +9652,7 @@ payload:
   - '+.bangdao-tech.com'
   - '+.banggo.com'
   - '+.banghaiwai.com'
+  - '+.bangjixia.com'
   - '+.bangkao.com'
   - '+.bangkebao.com'
   - '+.banglianai.com'
@@ -13116,6 +13117,7 @@ payload:
   - '+.cha-tm.com'
   - '+.cha001.com'
   - '+.cha127.com'
+  - '+.cha138.com'
   - '+.chabeichong.com'
   - '+.chachaba.com'
   - '+.chachaqu.com'
@@ -16332,6 +16334,7 @@ payload:
   - '+.cshixi.com'
   - '+.cshnkj.com'
   - '+.cshope.net'
+  - '+.cshuandu.com'
   - '+.cshufanyi.com'
   - '+.cshxdc.com'
   - '+.cshyqx.com'
@@ -17296,7 +17299,6 @@ payload:
   - '+.dawnlab.me'
   - '+.dawnled.net'
   - '+.dawuhanapp.com'
-  - '+.dawuxia.net'
   - '+.dawx.com'
   - '+.dawx.net'
   - '+.daxi.com'
@@ -22636,6 +22638,7 @@ payload:
   - '+.gansuairport.com'
   - '+.gansunet.com'
   - '+.gansuyunshi.com'
+  - '+.gantanhao.vip'
   - '+.ganxi666.com'
   - '+.ganxianw.com'
   - '+.ganxianzhi.win'
@@ -28154,7 +28157,6 @@ payload:
   - '+.hzwsjyjt.com'
   - '+.hzwtech.com'
   - '+.hzwxq.com'
-  - '+.hzwyh.com'
   - '+.hzxhymc.com'
   - '+.hzxiaobao.com'
   - '+.hzxiyuege.com'
@@ -38740,9 +38742,7 @@ payload:
   - '+.mrqf.com'
   - '+.mrsta.com'
   - '+.mrsu.me'
-  - '+.mrtbc.com'
   - '+.mrw.so'
-  - '+.mrwfbk.bar'
   - '+.mrwish.net'
   - '+.mrzhenggang.com'
   - '+.mrzl.com'
@@ -42628,6 +42628,7 @@ payload:
   - '+.pythondoc.com'
   - '+.pythoner.com'
   - '+.pythonheidong.com'
+  - '+.pythonke.com'
   - '+.pythonpub.com'
   - '+.pythontab.com'
   - '+.pythontip.com'
@@ -43207,6 +43208,7 @@ payload:
   - '+.qimingvc.com'
   - '+.qimingventures.com'
   - '+.qimingzi.net'
+  - '+.qiminzi.com'
   - '+.qimo.biz'
   - '+.qimodesign.com'
   - '+.qimser.com'
@@ -46190,7 +46192,6 @@ payload:
   - '+.shangdandan.com'
   - '+.shangdaotong.com'
   - '+.shangdiguo.com'
-  - '+.shangdingxin.com'
   - '+.shangdixinxi.com'
   - '+.shangdu.com'
   - '+.shangdu.info'
@@ -47570,7 +47571,6 @@ payload:
   - '+.sjhl.cc'
   - '+.sjhy.net'
   - '+.sjjob88.com'
-  - '+.sjkhsl.fun'
   - '+.sjlqgg.com'
   - '+.sjm.life'
   - '+.sjmdh.com'
@@ -52179,6 +52179,7 @@ payload:
   - '+.uclmjs.com'
   - '+.ucloudgda.com'
   - '+.ucloudnaming.info'
+  - '+.uclouds3.com'
   - '+.ucly.net'
   - '+.ucnaming.com'
   - '+.ucnano.com'
@@ -54278,6 +54279,7 @@ payload:
   - '+.weisiliang.com'
   - '+.weismarts.com'
   - '+.weistang.com'
+  - '+.weisurvey.com'
   - '+.weisuyun.com'
   - '+.weitehui.com'
   - '+.weitiaozhuan.com'
@@ -58563,6 +58565,7 @@ payload:
   - '+.xymcp3.com'
   - '+.xymens.com'
   - '+.xymfqb.com'
+  - '+.xymlcs.com'
   - '+.xymvip.com'
   - '+.xynbnb.com'
   - '+.xyniubi.com'
