--- a/directbak.yaml
+++ b/directbak.yaml
@@ -97,7 +97,6 @@ payload:
   - '+.01teacher.com'
   - '+.01tingshu.com'
   - '+.01w.com'
-  - '+.01water.com'
   - '+.01wb.com'
   - '+.01xs.com'
   - '+.01yo.com'
@@ -4812,7 +4811,6 @@ payload:
   - '+.5iape.com'
   - '+.5ibc.net'
   - '+.5ibear.com'
-  - '+.5icaipu.com'
   - '+.5icbs.com'
   - '+.5ichecker.com'
   - '+.5ichong.com'
@@ -5105,7 +5103,6 @@ payload:
   - '+.66460.com'
   - '+.6655.la'
   - '+.6660333.com'
-  - '+.6665890.com'
   - '+.6666519.net'
   - '+.666666.so'
   - '+.66667aaa.com'
@@ -5199,7 +5196,6 @@ payload:
   - '+.678py.com'
   - '+.67joy.com'
   - '+.67lm.com'
-  - '+.67mb.com'
   - '+.67mo.com'
   - '+.67wanwan.com'
   - '+.67yes.com'
@@ -6698,7 +6694,6 @@ payload:
   - '+.96yx.com'
   - '+.96zxue.com'
   - '+.97-7.com'
-  - '+.970655.com'
   - '+.9718.com'
   - '+.9718game.com'
   - '+.9724.com'
@@ -9883,7 +9878,6 @@ payload:
   - '+.baye.tech'
   - '+.bayescom.com'
   - '+.bayimob.com'
-  - '+.bayinfu.com'
   - '+.bayinh.com'
   - '+.bayinmao.com'
   - '+.bayuegua.com'
@@ -9905,7 +9899,6 @@ payload:
   - '+.bb-edu.com'
   - '+.bb-game.com'
   - '+.bb-pco.com'
-  - '+.bb-seo.com'
   - '+.bb06.com'
   - '+.bb179.com'
   - '+.bb8gk.com'
@@ -10143,7 +10136,6 @@ payload:
   - '+.beifabook.com'
   - '+.beifang.net'
   - '+.beifangfoshifen.com'
-  - '+.beifangyanxue.net'
   - '+.beifeng.com'
   - '+.beifuni.com'
   - '+.beiguorc.com'
@@ -10385,7 +10377,6 @@ payload:
   - '+.bgteach.com'
   - '+.bguai.com'
   - '+.bgwl.net'
-  - '+.bgxlre.com'
   - '+.bgyfhyx.com'
   - '+.bh.sb'
   - '+.bh1t.com'
@@ -11854,7 +11845,6 @@ payload:
   - '+.byteacctimg.com'
   - '+.byteactivity.com'
   - '+.byteadverts.com'
-  - '+.bytebye.com'
   - '+.bytecdn.com'
   - '+.bytecdntp.com'
   - '+.byted-static.com'
@@ -12473,7 +12463,6 @@ payload:
   - '+.ccieh3c.com'
   - '+.ccieshow.com'
   - '+.ccigchina.com'
-  - '+.ccigmall.com'
   - '+.ccihr.com'
   - '+.ccimz.com'
   - '+.ccipp.org'
@@ -21761,6 +21750,7 @@ payload:
   - '+.flatshare365.com'
   - '+.flawcache.com'
   - '+.flduo.com'
+  - '+.fle078.com'
   - '+.flexifont.com'
   - '+.fleyun.com'
   - '+.flgwx.com'
@@ -23139,7 +23129,6 @@ payload:
   - '+.gfxtr1.com'
   - '+.gfxy.com'
   - '+.gfzj.us'
-  - '+.gg-ev.com'
   - '+.gg-lb.com'
   - '+.gg-led.com'
   - '+.gg1994.com'
@@ -24304,7 +24293,6 @@ payload:
   - '+.gw.craft.moe'
   - '+.gw2sc.com'
   - '+.gw66.vip'
-  - '+.gw8888.com'
   - '+.gwamcc.com'
   - '+.gwauto.com'
   - '+.gwclouds.net'
@@ -24499,7 +24487,6 @@ payload:
   - '+.gzhkl.com'
   - '+.gzhphb.com'
   - '+.gzhshoulu.wang'
-  - '+.gzhtg.com'
   - '+.gzhtinfo.com'
   - '+.gzhuake.cc'
   - '+.gzhxpw.com'
@@ -25232,6 +25219,7 @@ payload:
   - '+.haoweishow.com'
   - '+.haowen100.com'
   - '+.haoword.com'
+  - '+.haowpc.com'
   - '+.haowu.com'
   - '+.haowu.info'
   - '+.haowu.link'
@@ -26487,7 +26475,6 @@ payload:
   - '+.hnetn.com'
   - '+.hnfa.org'
   - '+.hnfapiao.com'
-  - '+.hnfaren.com'
   - '+.hnfdx.com'
   - '+.hnfjz.com'
   - '+.hnfyqmj.com'
@@ -27503,7 +27490,6 @@ payload:
   - '+.hui10.com'
   - '+.hui10.net'
   - '+.hui100.com'
-  - '+.hui20.com'
   - '+.hui43.com'
   - '+.hui712.com'
   - '+.hui800.com'
@@ -28653,7 +28639,6 @@ payload:
   - '+.idianfa.com'
   - '+.idianshijia.com'
   - '+.idigi.net'
-  - '+.idler-et.com'
   - '+.idmchina.net'
   - '+.idmzj.com'
   - '+.idn100.com'
@@ -28716,7 +28701,6 @@ payload:
   - '+.ieasy123.com'
   - '+.ieasytech.com'
   - '+.ieayoio.com'
-  - '+.iebyte.com'
   - '+.iecdn.com'
   - '+.iecidc.com'
   - '+.iecie.com'
@@ -32318,7 +32302,6 @@ payload:
   - '+.junka.com'
   - '+.junlee.net'
   - '+.junlongtech.com'
-  - '+.junmidao.com'
   - '+.junmin.org'
   - '+.junmoseo.com'
   - '+.junnanhao.com'
@@ -32376,6 +32359,7 @@ payload:
   - '+.jushuo.com'
   - '+.jussevent.com'
   - '+.jusstickets.com'
+  - '+.jussyun.com'
   - '+.just4coding.com'
   - '+.just4fun.site'
   - '+.just998.com'
@@ -33378,7 +33362,6 @@ payload:
   - '+.kk3g.net'
   - '+.kkapp.com'
   - '+.kkbuyu8.com'
-  - '+.kkcache.com'
   - '+.kkcache.net'
   - '+.kkcaicai.com'
   - '+.kkcapture.com'
@@ -35817,7 +35800,6 @@ payload:
   - '+.lmwlhh.com'
   - '+.lmwljz.com'
   - '+.lmxxxz.com'
-  - '+.lmyd5.com'
   - '+.lnamphp.com'
   - '+.lncldapi.com'
   - '+.lncnw.com'
@@ -37960,7 +37942,6 @@ payload:
   - '+.mikublog.com'
   - '+.mikucdn.com'
   - '+.mikuclub.fun'
-  - '+.milan-bride.com'
   - '+.milanvip.com'
   - '+.mileage.vip'
   - '+.milejia.com'
@@ -39782,7 +39763,6 @@ payload:
   - '+.nfrencai.com'
   - '+.nfs-china.com'
   - '+.nfschina.com'
-  - '+.nfwin.com'
   - '+.nfyk.com'
   - '+.nfzhouyi.com'
   - '+.ng-alain.com'
@@ -40939,7 +40919,6 @@ payload:
   - '+.orientgolf.com'
   - '+.orientpc.com'
   - '+.orienttumor.com'
-  - '+.orientwalt.com'
   - '+.originalkindergarten.com'
   - '+.origincn.com'
   - '+.originlee.com'
@@ -41775,7 +41754,6 @@ payload:
   - '+.phpweb.net'
   - '+.phpweblog.net'
   - '+.phpxs.com'
-  - '+.phpyuan.com'
   - '+.phpyun.com'
   - '+.phys.net'
   - '+.physicalchina.vip'
@@ -43273,7 +43251,6 @@ payload:
   - '+.qingliangkeji.com'
   - '+.qinglin.net'
   - '+.qingliulan.com'
-  - '+.qingliuzyw.com'
   - '+.qinglm.com'
   - '+.qinglue.net'
   - '+.qingman5.com'
@@ -43865,7 +43842,6 @@ payload:
   - '+.quanmin110.com'
   - '+.quanminbagua.com'
   - '+.quanminbb.com'
-  - '+.quanmingjiexi.com'
   - '+.quanminyanxuan.com'
   - '+.quanqiuwa.com'
   - '+.quanquanapp.net'
@@ -48007,7 +47983,6 @@ payload:
   - '+.softgostop.com'
   - '+.softhead-citavi.com'
   - '+.softhome.cc'
-  - '+.softparkinfo.com'
   - '+.softtest.com'
   - '+.softwarechn.com'
   - '+.softwarecn.com'
@@ -53559,7 +53534,6 @@ payload:
   - '+.waimaozhuge.com'
   - '+.waimungfire.com'
   - '+.waiqin365.com'
-  - '+.waisir.com'
   - '+.waitingfy.com'
   - '+.waitsun.com'
   - '+.wajueji.com'
@@ -53682,7 +53656,6 @@ payload:
   - '+.wanghaida.com'
   - '+.wanghualang.com'
   - '+.wanghz.com'
-  - '+.wangi.cc'
   - '+.wangid.com'
   - '+.wangjianshuo.com'
   - '+.wangjinle.com'
@@ -56433,7 +56406,6 @@ payload:
   - '+.xdfkt.com'
   - '+.xdfpr.com'
   - '+.xdgalaxy.com'
-  - '+.xdhbs.com'
   - '+.xdhcn.com'
   - '+.xdiarys.com'
   - '+.xdj-sz.com'
@@ -57698,7 +57670,6 @@ payload:
   - '+.xjabc.net'
   - '+.xjbdf.net'
   - '+.xjbhyx.com'
-  - '+.xjbmaker.com'
   - '+.xjbuluo.com'
   - '+.xjc18.com'
   - '+.xjcc.net'
@@ -58575,7 +58546,6 @@ payload:
   - '+.xyppzx.com'
   - '+.xyqb.com'
   - '+.xyqczy.com'
-  - '+.xyqka.com'
   - '+.xyrbszb.com'
   - '+.xyrtv.com'
   - '+.xysb.com'
@@ -58676,7 +58646,6 @@ payload:
   - '+.y007.com'
   - '+.y1995.com'
   - '+.y2002.com'
-  - '+.y261.com'
   - '+.y500.me'
   - '+.y5663.com'
   - '+.y6162.com'
@@ -59027,7 +58996,6 @@ payload:
   - '+.ycyui.com'
   - '+.yczihua.com'
   - '+.yczxyy.com'
-  - '+.ydaobo.com'
   - '+.ydbimg.com'
   - '+.ydc360.com'
   - '+.yddff556.xyz'
@@ -60935,6 +60903,7 @@ payload:
   - '+.yumimobi.com'
   - '+.yuming.com'
   - '+.yumingguwen.com'
+  - '+.yumingjoy.com'
   - '+.yumixitong.com'
   - '+.yumstone.com'
   - '+.yun-gu.com'
@@ -62275,7 +62244,6 @@ payload:
   - '+.zhefengle.com'
   - '+.zhejiangmuseum.com'
   - '+.zhejiangqinghe.com'
-  - '+.zhejie.com'
   - '+.zhejing.tech'
   - '+.zhekangzc.com'
   - '+.zhekouo.com'
@@ -62996,7 +62964,6 @@ payload:
   - '+.zhw2101024.com'
   - '+.zhwangart.com'
   - '+.zhwdw.com'
-  - '+.zhwenku.com'
   - '+.zhwenxue.com'
   - '+.zhx-mall.com'
   - '+.zhxfei.com'
@@ -64010,7 +63977,6 @@ payload:
   - '+.zxlib.com'
   - '+.zxlmx.com'
   - '+.zxmall.com'
-  - '+.zxmee.com'
   - '+.zxmn2018.com'
   - '+.zxmseed.com'
   - '+.zxmxd.com'
