--- a/directbak.yaml
+++ b/directbak.yaml
@@ -2172,7 +2172,6 @@ payload:
   - '+.24geban.com'
   - '+.24haowan.com'
   - '+.24hmb.com'
-  - '+.24jz.com'
   - '+.24k99.com'
   - '+.24ker.com'
   - '+.24kplus.com'
@@ -3088,7 +3087,6 @@ payload:
   - '+.3ddl.net'
   - '+.3ddl.org'
   - '+.3deazer.com'
-  - '+.3demoo.com'
   - '+.3dfrom.com'
   - '+.3dgenomics.org'
   - '+.3dhao.com'
@@ -5824,6 +5822,7 @@ payload:
   - '+.81677.com'
   - '+.8169.com'
   - '+.817398.com'
+  - '+.8175835ccc.com'
   - '+.81761.com'
   - '+.817711.com'
   - '+.818.com'
@@ -6765,6 +6764,7 @@ payload:
   - '+.98t.la'
   - '+.98t.net'
   - '+.98weixin.com'
+  - '+.98wubi.com'
   - '+.98znz.com'
   - '+.99.com'
   - '+.99083.com'
@@ -6792,6 +6792,7 @@ payload:
   - '+.9966w.com'
   - '+.996a.com'
   - '+.996dns.com'
+  - '+.996pic.com'
   - '+.9973.com'
   - '+.997788.com'
   - '+.998.com'
@@ -7365,6 +7366,7 @@ payload:
   - '+.adtianmai.com'
   - '+.adtime.com'
   - '+.adtmm.com'
+  - '+.adtxl.com'
   - '+.adubest.com'
   - '+.adukwai.com'
   - '+.adunicorn.com'
@@ -9224,6 +9226,7 @@ payload:
   - '+.awsdns-cn-36.net'
   - '+.awsdns-cn-57.com'
   - '+.awsdns-cn-58.net'
+  - '+.awsl.wang'
   - '+.awsok.com'
   - '+.awspal.com'
   - '+.awstar.net'
@@ -10793,7 +10796,6 @@ payload:
   - '+.bizcharts.net'
   - '+.bizcn.com'
   - '+.bizconfstreaming.com'
-  - '+.bizgame.com'
   - '+.bizhi360.com'
   - '+.bizhi88.com'
   - '+.bizhicool.com'
@@ -12157,6 +12159,7 @@ payload:
   - '+.camera360.com'
   - '+.camgle.com'
   - '+.camnpr.com'
+  - '+.camoryapps.com'
   - '+.campanilechina.com'
   - '+.campus-app.net'
   - '+.campuschina.org'
@@ -12755,6 +12758,7 @@ payload:
   - '+.cdnhwcprh113.com'
   - '+.cdnhwctnm107.com'
   - '+.cdnidc.net'
+  - '+.cdnjson.com'
   - '+.cdnjtzy.com'
   - '+.cdnle.com'
   - '+.cdnle.net'
@@ -14497,6 +14501,7 @@ payload:
   - '+.chunjingtech.com'
   - '+.chunjiws.com'
   - '+.chunmi.com'
+  - '+.chunmiaosh.com'
   - '+.chunqiuwang.com'
   - '+.chunquff.com'
   - '+.chunshuitang.com'
@@ -15668,6 +15673,7 @@ payload:
   - '+.codepku.com'
   - '+.codeplayer.vip'
   - '+.codeplaygames.com'
+  - '+.codeprj.com'
   - '+.coder.work'
   - '+.coder100.com'
   - '+.coder4.com'
@@ -16305,7 +16311,6 @@ payload:
   - '+.csdn.com'
   - '+.csdn.net'
   - '+.csdnxiazai.xyz'
-  - '+.csdqp.com'
   - '+.csdxcw.com'
   - '+.csdyx.com'
   - '+.csea767.com'
@@ -16916,7 +16921,6 @@ payload:
   - '+.dagongcredit.com'
   - '+.dagongnet.com'
   - '+.dagufood.com'
-  - '+.daguu.com'
   - '+.daguzhe.com'
   - '+.dahainan.com'
   - '+.dahaiyang.com'
@@ -18329,6 +18333,7 @@ payload:
   - '+.dm004.net'
   - '+.dm0571.com'
   - '+.dm176.com'
+  - '+.dm21.com'
   - '+.dm300.com'
   - '+.dm321.net'
   - '+.dm5.com'
@@ -18365,7 +18370,6 @@ payload:
   - '+.dmrtb.com'
   - '+.dmssc.net'
   - '+.dmtg.com'
-  - '+.dmyy.cc'
   - '+.dmyz.org'
   - '+.dmyzw.com'
   - '+.dmzfa.com'
@@ -18639,6 +18643,7 @@ payload:
   - '+.dongyaods.com'
   - '+.dongyin.net'
   - '+.dongyun.biz'
+  - '+.dongyun01.com'
   - '+.dongzhougroup.com'
   - '+.dongzhuoyao.com'
   - '+.donhonet.net'
@@ -19727,6 +19732,7 @@ payload:
   - '+.ecombdapi.com'
   - '+.ecombdimg.com'
   - '+.ecombdstatic.com'
+  - '+.ecombdvod.com'
   - '+.ecomoter.com'
   - '+.ecool.site'
   - '+.ecoplastech.com'
@@ -22472,7 +22478,6 @@ payload:
   - '+.g88885555.com'
   - '+.g88886666.com'
   - '+.g8f8.com'
-  - '+.ga0.me'
   - '+.ga001.com'
   - '+.ga25.com'
   - '+.gaapqcloud.com'
@@ -26724,7 +26729,6 @@ payload:
   - '+.hongshunet.com'
   - '+.hongshunth.com'
   - '+.hongsungifts.com'
-  - '+.hongt.com'
   - '+.hongtu.net'
   - '+.hongxiaolong.com'
   - '+.hongxin18.com'
@@ -27177,7 +27181,6 @@ payload:
   - '+.huadoo.com'
   - '+.huadream.com'
   - '+.huaduocai.net'
-  - '+.huadx.com'
   - '+.huaease.net'
   - '+.huaer.cc'
   - '+.huafang.com'
@@ -27434,7 +27437,6 @@ payload:
   - '+.huazhu.com'
   - '+.huazhuanapp.com'
   - '+.huazhucorp.com'
-  - '+.huazi55.xyz'
   - '+.huazirc.com'
   - '+.hubcyts.com'
   - '+.hubei-design.com'
@@ -28618,6 +28620,7 @@ payload:
   - '+.idcwn.com'
   - '+.idcys.com'
   - '+.idcyunwei.org'
+  - '+.idczone.net'
   - '+.idea-king.org'
   - '+.idea1986.com'
   - '+.ideacms.net'
@@ -31292,6 +31295,7 @@ payload:
   - '+.jinrui-tech.com'
   - '+.jins-cn.com'
   - '+.jinsdk.com'
+  - '+.jinse.com'
   - '+.jinsebook.com'
   - '+.jinsedihao.com'
   - '+.jinsehuaqin.com'
@@ -36619,6 +36623,7 @@ payload:
   - '+.lytuchuang2.com'
   - '+.lytuchuang3.com'
   - '+.lytuchuang4.com'
+  - '+.lytuchuang7.com'
   - '+.lyun.me'
   - '+.lyunweb.com'
   - '+.lyvnee.com'
@@ -39672,7 +39677,6 @@ payload:
   - '+.newcosemi.com'
   - '+.newdao.net'
   - '+.newday.me'
-  - '+.newdefend.com'
   - '+.newdon.net'
   - '+.newdruginfo.com'
   - '+.newdu.com'
@@ -39987,6 +39991,7 @@ payload:
   - '+.njhaiwai.com'
   - '+.njhengyou.com'
   - '+.njhgame.com'
+  - '+.njhgzg.com'
   - '+.njhszoo.com'
   - '+.njibhu.com'
   - '+.njjn.com'
@@ -41327,6 +41332,7 @@ payload:
   - '+.paopao.com'
   - '+.paopaoche.net'
   - '+.paopaohd.com'
+  - '+.paopaoshipin.com'
   - '+.paopaox.com'
   - '+.paoshuba.cc'
   - '+.paoxq.com'
@@ -42330,6 +42336,7 @@ payload:
   - '+.pptok.com'
   - '+.pptschool.com'
   - '+.pptstore.net'
+  - '+.pptutor.com'
   - '+.pptv.com'
   - '+.pptvyun.com'
   - '+.pptxy.com'
@@ -43413,7 +43420,6 @@ payload:
   - '+.qiwenhui.com'
   - '+.qixia.ltd'
   - '+.qixiandoc.com'
-  - '+.qixifuren.com'
   - '+.qixin.com'
   - '+.qixin007.com'
   - '+.qixin18.com'
@@ -44161,6 +44167,7 @@ payload:
   - '+.qyren168.com'
   - '+.qysd.net'
   - '+.qysfl.com'
+  - '+.qysgf.com'
   - '+.qysuliao.com'
   - '+.qyt1902.com'
   - '+.qyt321.com'
@@ -44321,7 +44328,6 @@ payload:
   - '+.raysilicon.com'
   - '+.raythonsoft.com'
   - '+.raytoon.net'
-  - '+.rayu.me'
   - '+.rayuu.com'
   - '+.rayyo.com'
   - '+.rayyzx.com'
@@ -45583,7 +45589,6 @@ payload:
   - '+.scsgk.com'
   - '+.scsjnxh.org'
   - '+.scsstjt.com'
-  - '+.sctaixin.com'
   - '+.sctbc.net'
   - '+.sctcd.com'
   - '+.sctobacco.com'
@@ -46834,7 +46839,6 @@ payload:
   - '+.shoujitouping.com'
   - '+.shoujiwan.com'
   - '+.shouliwang.com'
-  - '+.shouluo.me'
   - '+.shoumizhibo.com'
   - '+.shoumm.com'
   - '+.shouqianba.com'
@@ -47814,6 +47818,7 @@ payload:
   - '+.smiseo.com'
   - '+.smjyfx.com'
   - '+.smk3000.com'
+  - '+.smkmake.com'
   - '+.smkmp.com'
   - '+.smmy365.com'
   - '+.smo-clinplus.com'
@@ -48061,7 +48066,6 @@ payload:
   - '+.somo.so'
   - '+.somode.com'
   - '+.sonald.me'
-  - '+.songchuan12345.com'
   - '+.songcn.com'
   - '+.songguo7.com'
   - '+.songguojiankang.com'
@@ -48482,7 +48486,6 @@ payload:
   - '+.ssyar.com'
   - '+.ssyer.com'
   - '+.ssytnet.com'
-  - '+.ssyule.com'
   - '+.ssyxlx.com'
   - '+.ssyzx.net'
   - '+.sszjnc.com'
@@ -49512,6 +49515,7 @@ payload:
   - '+.szxinghe.net'
   - '+.szxinjiaxin.com'
   - '+.szxinyixin.com'
+  - '+.szxiot.com'
   - '+.szxlga.com'
   - '+.szxsdmy.com'
   - '+.szxuexiao.com'
@@ -49738,7 +49742,6 @@ payload:
   - '+.tangux.com'
   - '+.tangwumo.com'
   - '+.tangyingkang.com'
-  - '+.tangzhekan2.net'
   - '+.tangzhuan666.com'
   - '+.tanhaibo.net'
   - '+.tanho.com'
@@ -53234,6 +53237,7 @@ payload:
   - '+.vol.moe'
   - '+.volccdn.com'
   - '+.volceapplog.com'
+  - '+.volcengine.com'
   - '+.volces.com'
   - '+.volcfcdndvs.com'
   - '+.volcgslb.com'
@@ -53608,6 +53612,7 @@ payload:
   - '+.wanding.net'
   - '+.wandodo.com'
   - '+.wandoer.com'
+  - '+.wandongli.com'
   - '+.wandouip.com'
   - '+.wandoujia.com'
   - '+.waneziyuan.com'
@@ -55002,7 +55007,6 @@ payload:
   - '+.wind.moe'
   - '+.wind2021.com'
   - '+.windcoder.com'
-  - '+.windever.com'
   - '+.windin.com'
   - '+.windmsn.com'
   - '+.windows10.pro'
@@ -55928,6 +55932,7 @@ payload:
   - '+.wwfchina.org'
   - '+.wwggw.com'
   - '+.wwjia.com'
+  - '+.wwkbiva.com'
   - '+.wwmhdq.com'
   - '+.wws23.com'
   - '+.wwsgh.com'
@@ -58152,7 +58157,6 @@ payload:
   - '+.xuanwumobile.com'
   - '+.xuanwww.com'
   - '+.xuanxiaozhuanjia.com'
-  - '+.xuanxiu.cc'
   - '+.xuanxuan.com'
   - '+.xuanxuangame.com'
   - '+.xuanxuantemai.com'
@@ -58793,7 +58797,6 @@ payload:
   - '+.yankanshu.net'
   - '+.yankay.com'
   - '+.yanliu.org'
-  - '+.yanlutong.com'
   - '+.yanmbjiage.com'
   - '+.yannaisi.com'
   - '+.yannv.com'
@@ -60154,7 +60157,6 @@ payload:
   - '+.yooxun.com'
   - '+.yooxuu.com'
   - '+.yooyoo360.com'
-  - '+.yoozai.com'
   - '+.yoozhe.com'
   - '+.yoozoo.com'
   - '+.yoozword.com'
@@ -60584,6 +60586,7 @@ payload:
   - '+.yse360.cc'
   - '+.ysedu.com'
   - '+.yseeker.com'
+  - '+.ysepan.com'
   - '+.ysepay.com'
   - '+.ysext.com'
   - '+.ysfog.com'
@@ -61994,6 +61997,7 @@ payload:
   - '+.zgwhfe.com'
   - '+.zgwhw.com'
   - '+.zgwlcsj.com'
+  - '+.zgwstxc.com'
   - '+.zgwt.co'
   - '+.zgwxbbs.com'
   - '+.zgxcfx.com'
@@ -63519,6 +63523,7 @@ payload:
   - '+.zongheng.com'
   - '+.zongheng001.com'
   - '+.zonghengke.com'
+  - '+.zonghengxiaoshuo.com'
   - '+.zongming.net'
   - '+.zongs365.com'
   - '+.zongshenmotor.com'
