--- a/directbak.yaml
+++ b/directbak.yaml
@@ -2188,7 +2188,6 @@ payload:
   - '+.2500fang.com'
   - '+.2500sz.com'
   - '+.250sy.cc'
-  - '+.251633.com'
   - '+.2529.com'
   - '+.253.com'
   - '+.253669vqx.com'
@@ -2529,7 +2528,6 @@ payload:
   - '+.322wl.com'
   - '+.3230.com'
   - '+.3234.com'
-  - '+.323507.com'
   - '+.3237.com'
   - '+.324.com'
   - '+.3259.com'
@@ -3455,7 +3453,6 @@ payload:
   - '+.4hpy.com'
   - '+.4inlook.com'
   - '+.4jplus.com'
-  - '+.4k-w.com'
   - '+.4k123.com'
   - '+.4kbizhi.com'
   - '+.4kong.com'
@@ -3961,7 +3958,6 @@ payload:
   - '+.51sgg.cc'
   - '+.51share.net'
   - '+.51shebao.com'
-  - '+.51shebao.org'
   - '+.51sheyuan.com'
   - '+.51shiping.com'
   - '+.51shop.ink'
@@ -4151,7 +4147,6 @@ payload:
   - '+.520mingmei.com'
   - '+.520mojing.com'
   - '+.520mwx.com'
-  - '+.520sz.com'
   - '+.520wawa.com'
   - '+.520way.com'
   - '+.520xiazai.com'
@@ -4468,7 +4463,6 @@ payload:
   - '+.5507p.com'
   - '+.55178.com'
   - '+.55188.com'
-  - '+.551house.com'
   - '+.5523.com'
   - '+.55344.com'
   - '+.5548.net'
@@ -4572,7 +4566,6 @@ payload:
   - '+.56tchr.com'
   - '+.56tj.com'
   - '+.56uu.com'
-  - '+.56wen.com'
   - '+.56ye.net'
   - '+.56zzx.com'
   - '+.57.net'
@@ -4796,6 +4789,7 @@ payload:
   - '+.5gy.com'
   - '+.5h.com'
   - '+.5ha.net'
+  - '+.5haoxue.net'
   - '+.5hrc.com'
   - '+.5hte21mz.com'
   - '+.5i-training.net'
@@ -5343,7 +5337,6 @@ payload:
   - '+.703804.com'
   - '+.7080edu.com'
   - '+.7082.com'
-  - '+.709xs.com'
   - '+.70dh.com'
   - '+.70dir.com'
   - '+.70god.com'
@@ -5385,7 +5378,6 @@ payload:
   - '+.71k.com'
   - '+.71lady.com'
   - '+.71lady.net'
-  - '+.71one.net'
   - '+.71p.net'
   - '+.71study.com'
   - '+.71txt.com'
@@ -7739,6 +7731,7 @@ payload:
   - '+.aimatech.com'
   - '+.aimatrix.ai'
   - '+.aimeas.com'
+  - '+.aimei39.com'
   - '+.aimeideni.com'
   - '+.aimeike.tv'
   - '+.aimeit.com'
@@ -10123,7 +10116,6 @@ payload:
   - '+.beibaozq.com'
   - '+.beibei.com'
   - '+.beibeicdn.com'
-  - '+.beibj.com'
   - '+.beicdn.com'
   - '+.beidahuang.net'
   - '+.beidasoft.com'
@@ -10909,7 +10901,6 @@ payload:
   - '+.bjidit.com'
   - '+.bjipwqzx.com'
   - '+.bjiwex.com'
-  - '+.bjjbsj.com'
   - '+.bjjchf.com'
   - '+.bjjdwx.com'
   - '+.bjjf.cc'
@@ -11250,7 +11241,6 @@ payload:
   - '+.bob-cardif.com'
   - '+.bob-leasing.com'
   - '+.bob.com'
-  - '+.bob2012.com'
   - '+.bob4885.com'
   - '+.bobaow.com'
   - '+.bobbns.com'
@@ -11483,7 +11473,6 @@ payload:
   - '+.bqg8.la'
   - '+.bqg99.cc'
   - '+.bqgyy.com'
-  - '+.bqiapp.com'
   - '+.bqimg.com'
   - '+.bqpoint.com'
   - '+.bqq8.com'
@@ -12233,7 +12222,6 @@ payload:
   - '+.caohua.com'
   - '+.caomeishuma.com'
   - '+.caomeixz10.xyz'
-  - '+.caomin5168.com'
   - '+.caoniang.com'
   - '+.caotama.com'
   - '+.caoxianfc.com'
@@ -12616,7 +12604,6 @@ payload:
   - '+.ccyjjd.com'
   - '+.ccyts.com'
   - '+.ccyunmai.com'
-  - '+.ccyyls.com'
   - '+.ccziben.com'
   - '+.cd-cxh.com'
   - '+.cd-kc.com'
@@ -16853,7 +16840,6 @@ payload:
   - '+.d65d6.com'
   - '+.d777.com'
   - '+.d77777777.com'
-  - '+.d7baike.net'
   - '+.d7ol.com'
   - '+.d7vg.com'
   - '+.d8th.com'
@@ -20942,7 +20928,6 @@ payload:
   - '+.fangchanhz.com'
   - '+.fangchip.com'
   - '+.fangcloud.com'
-  - '+.fangcs.net'
   - '+.fangdaijisuanqi.com'
   - '+.fangdd.com'
   - '+.fangdichanceo.com'
@@ -22973,7 +22958,6 @@ payload:
   - '+.geekfans.com'
   - '+.geekhub.com'
   - '+.geekiron.com'
-  - '+.geekjc.com'
   - '+.geekluo.com'
   - '+.geekmaker.com'
   - '+.geekman.vip'
@@ -25290,7 +25274,6 @@ payload:
   - '+.happyroll.net'
   - '+.happysky.org'
   - '+.happytimenet.com'
-  - '+.happytrave.com'
   - '+.happyux.com'
   - '+.happywalk.net'
   - '+.happyya.com'
@@ -25318,7 +25301,6 @@ payload:
   - '+.hashnest.com'
   - '+.hasoltd.com'
   - '+.hassbian.com'
-  - '+.hat-toraya.com'
   - '+.hat358.com'
   - '+.hatfav.com'
   - '+.hatlonely.com'
@@ -26882,7 +26864,6 @@ payload:
   - '+.hp888.com'
   - '+.hpccake.com'
   - '+.hpdwfd2.com'
-  - '+.hpicss.com'
   - '+.hpoi.net'
   - '+.hpool.online'
   - '+.hprt.com'
@@ -27565,7 +27546,6 @@ payload:
   - '+.huinaimei.com'
   - '+.huing.net'
   - '+.huion.com'
-  - '+.huiqianbian.com'
   - '+.huiqudsp.com'
   - '+.huiris.com'
   - '+.huirixiao.com'
@@ -28013,7 +27993,6 @@ payload:
   - '+.hyper.sh'
   - '+.hypergryph.com'
   - '+.hypersilicon.com'
-  - '+.hypnos04.com'
   - '+.hyrainbow.com'
   - '+.hysdknb.com'
   - '+.hysec.com'
@@ -28175,7 +28154,6 @@ payload:
   - '+.i-bei.com'
   - '+.i-bigdatas.net'
   - '+.i-click.com'
-  - '+.i-element.org'
   - '+.i-ev.com'
   - '+.i-excellence.com'
   - '+.i-firefly.com'
@@ -28359,7 +28337,6 @@ payload:
   - '+.ibroadlink.com'
   - '+.ibruce.info'
   - '+.ibscdn.com'
-  - '+.ibtba.cc'
   - '+.ibtmao.com'
   - '+.ibtsat.com'
   - '+.ibuick.com'
@@ -29855,7 +29832,6 @@ payload:
   - '+.it165.net'
   - '+.it168.com'
   - '+.it2021.com'
-  - '+.it3588.com'
   - '+.it376.com'
   - '+.it399.com'
   - '+.it525.com'
@@ -30322,7 +30298,6 @@ payload:
   - '+.jason-z.com'
   - '+.jasongj.com'
   - '+.jasperxu.com'
-  - '+.jasve.com'
   - '+.jatd.org'
   - '+.java-er.com'
   - '+.java1234.com'
@@ -30794,7 +30769,6 @@ payload:
   - '+.jiangxindaojia.com'
   - '+.jiangxinlingdu.com'
   - '+.jiangxiol.com'
-  - '+.jiangxipiaoliu.com'
   - '+.jiangzi.com'
   - '+.jianhaobao.com'
   - '+.jianhen.net'
@@ -32026,7 +32000,6 @@ payload:
   - '+.jseoptics.com'
   - '+.jser.com'
   - '+.jser.io'
-  - '+.jsfengchao.com'
   - '+.jsfof.com'
   - '+.jsform.com'
   - '+.jsform3.com'
@@ -33221,7 +33194,6 @@ payload:
   - '+.khzypic.com'
   - '+.ki-pa.com'
   - '+.kiaic.com'
-  - '+.kibey.com'
   - '+.kibinggroup.com'
   - '+.kibo.tech'
   - '+.kid17.com'
@@ -33378,7 +33350,6 @@ payload:
   - '+.kkdownload.com'
   - '+.kkeji.com'
   - '+.kkeye.com'
-  - '+.kkfor.com'
   - '+.kkguan.com'
   - '+.kkh-global.com'
   - '+.kkid.vip'
@@ -33521,7 +33492,6 @@ payload:
   - '+.kole8.com'
   - '+.kolrank.com'
   - '+.kolstore.com'
-  - '+.komatech-china.com'
   - '+.komect.com'
   - '+.kometo.com'
   - '+.koncoo.com'
@@ -34136,7 +34106,6 @@ payload:
   - '+.l36h.com'
   - '+.l5550.com'
   - '+.l68.net'
-  - '+.l6bxs.com'
   - '+.l77777777.com'
   - '+.l7audiolab.com'
   - '+.l99.com'
@@ -34544,7 +34513,6 @@ payload:
   - '+.lc-cn-n1-thovg.com'
   - '+.lc-news.com'
   - '+.lc123.net'
-  - '+.lc73.com'
   - '+.lc787.com'
   - '+.lcbdf.net'
   - '+.lcbtv.com'
@@ -36431,6 +36399,7 @@ payload:
   - '+.lv74.com'
   - '+.lv96.com'
   - '+.lvanol.com'
+  - '+.lvbad.com'
   - '+.lvbenma.com'
   - '+.lvbuo.com'
   - '+.lvchanghuanbao.com'
@@ -37036,6 +37005,7 @@ payload:
   - '+.manulife-sinochem.com'
   - '+.manwuxian123.com'
   - '+.manxiu-law.com'
+  - '+.manyibaojie.vip'
   - '+.manylaw.com'
   - '+.manyoo.net'
   - '+.manyou.com'
@@ -38422,7 +38392,6 @@ payload:
   - '+.moeking.me'
   - '+.moeli123.com'
   - '+.moemiao.net'
-  - '+.moenis.com'
   - '+.moeover.com'
   - '+.moerail.ml'
   - '+.moerkeji.net'
@@ -38837,6 +38806,7 @@ payload:
   - '+.mtzuichen.com'
   - '+.mtzxgf.com'
   - '+.mubanjianli.com'
+  - '+.mubanwan.com'
   - '+.mubu.com'
   - '+.mubu.io'
   - '+.mubucm.com'
@@ -39583,7 +39553,6 @@ payload:
   - '+.nesbbs.com'
   - '+.nestgene.com'
   - '+.nestlechinese.com'
-  - '+.nestlot.com'
   - '+.net-add.com'
   - '+.net-swift.com'
   - '+.net0516.com'
@@ -42231,7 +42200,6 @@ payload:
   - '+.postgresqlchina.com'
   - '+.postjson.com'
   - '+.postpony.com'
-  - '+.posuiji168.com'
   - '+.potevio.com'
   - '+.potianji.net'
   - '+.potplayer.org'
@@ -44174,7 +44142,6 @@ payload:
   - '+.qytdesign.com'
   - '+.qytxhy.com'
   - '+.qyule.org'
-  - '+.qyvqg.com'
   - '+.qywww.net'
   - '+.qyxgyu.com'
   - '+.qyxxpd.com'
@@ -44429,7 +44396,6 @@ payload:
   - '+.rebatesme.com'
   - '+.rebo5566.com'
   - '+.rebooo.com'
-  - '+.reborncodinglife.com'
   - '+.recgo.com'
   - '+.rechaos.com'
   - '+.recolighting.com'
@@ -45216,7 +45182,6 @@ payload:
   - '+.s955s.com'
   - '+.s95r.com'
   - '+.s98s2.com'
-  - '+.s9jk.com'
   - '+.s9yun.com'
   - '+.sa-ec.com'
   - '+.sa-log.com'
@@ -47206,7 +47171,6 @@ payload:
   - '+.shzbc.com'
   - '+.shzbh.com'
   - '+.shzbkj.com'
-  - '+.shzcgs.org'
   - '+.shzf.com'
   - '+.shzfzz.net'
   - '+.shzgd.org'
@@ -52140,7 +52104,6 @@ payload:
   - '+.ucdchina.com'
   - '+.ucdok.com'
   - '+.ucdrs.net'
-  - '+.ucdwhatif.com'
   - '+.ucfly.com'
   - '+.ucfma.com'
   - '+.ucfpay.com'
@@ -52151,7 +52114,6 @@ payload:
   - '+.uchuhimo.me'
   - '+.ucicq.com'
   - '+.ucjoy.com'
-  - '+.uckendo.com'
   - '+.uclmad.com'
   - '+.uclmimg.com'
   - '+.uclmjs.com'
@@ -52759,7 +52721,6 @@ payload:
   - '+.uzbox.com'
   - '+.uzing.net'
   - '+.uzise.com'
-  - '+.uzmzm.com'
   - '+.uzshare.com'
   - '+.uzuzuz.com'
   - '+.uzzf.com'
@@ -53444,7 +53405,6 @@ payload:
   - '+.vysj.com'
   - '+.vyuan8.com'
   - '+.vyun.com'
-  - '+.vz1m.com'
   - '+.vz41.com'
   - '+.vzan.cc'
   - '+.vzan.com'
@@ -55157,7 +55117,6 @@ payload:
   - '+.wjyh.com'
   - '+.wjyt-china.org'
   - '+.wjyw.com'
-  - '+.wjz0098.me'
   - '+.wjzj.vip'
   - '+.wk007.com'
   - '+.wk2.com'
@@ -55876,7 +55835,6 @@ payload:
   - '+.wuxi.com'
   - '+.wuxiairport.com'
   - '+.wuxiamh.com'
-  - '+.wuxiangxing.com'
   - '+.wuxianhaibao.com'
   - '+.wuxianlin.com'
   - '+.wuxiantu.com'
@@ -58729,7 +58687,6 @@ payload:
   - '+.yanghengjun.com'
   - '+.yanghua.com'
   - '+.yanghui.com'
-  - '+.yangjian.me'
   - '+.yangjie.li'
   - '+.yangjisen.com'
   - '+.yangkatie.com'
@@ -59266,7 +59223,6 @@ payload:
   - '+.yhshapp.com'
   - '+.yhsms.com'
   - '+.yhspy.com'
-  - '+.yhsrv.com'
   - '+.yhtools.cc'
   - '+.yhtx.tv'
   - '+.yhudxc.com'
@@ -60997,7 +60953,6 @@ payload:
   - '+.yungao-ssp.com'
   - '+.yungao.mobi'
   - '+.yungongchang.com'
-  - '+.yungoumi.com'
   - '+.yungouos.com'
   - '+.yungousj.net'
   - '+.yunguajibao.com'
@@ -61173,7 +61128,6 @@ payload:
   - '+.yuqiaolong.com'
   - '+.yuquanhosp.com'
   - '+.yuque.com'
-  - '+.yureen.com'
   - '+.yuriimg.com'
   - '+.yusa.me'
   - '+.yusainorthwest.com'
@@ -61374,7 +61328,6 @@ payload:
   - '+.yycoin.com'
   - '+.yycqc.com'
   - '+.yycro.com'
-  - '+.yydatas.com'
   - '+.yydbzz.com'
   - '+.yydcs.com'
   - '+.yydidai.com'
@@ -62237,7 +62190,6 @@ payload:
   - '+.zhcf001.com'
   - '+.zhcw.com'
   - '+.zhdba.com'
-  - '+.zhdchb.com'
   - '+.zhdgps.com'
   - '+.zhe.com'
   - '+.zhe2.com'
@@ -63454,7 +63406,6 @@ payload:
   - '+.zmumu.com'
   - '+.zmwbf.com'
   - '+.zmwo.com'
-  - '+.zmxiaoqu.com'
   - '+.zmxiazai.com'
   - '+.zmxiu.com'
   - '+.zmye5vly.com'
