--- a/directbak.yaml
+++ b/directbak.yaml
@@ -8551,7 +8551,6 @@ payload:
   - '+.aobacore.com'
   - '+.aobaishi.com'
   - '+.aobosoft.com'
-  - '+.aoc.com'
   - '+.aocde.com'
   - '+.aocdn.com'
   - '+.aoch.com'
@@ -32239,7 +32238,6 @@ payload:
   - '+.julysong.com'
   - '+.jumanhua.com'
   - '+.jumei.com'
-  - '+.jumeiglobal.com'
   - '+.jumeinet.com'
   - '+.jumengren.com'
   - '+.jumi-cdn.com'
@@ -40247,6 +40245,7 @@ payload:
   - '+.ntjoy.com'
   - '+.ntjrchina.com'
   - '+.ntjymall.com'
+  - '+.ntlcjd.com'
   - '+.ntneuro.org'
   - '+.ntp.felixc.at'
   - '+.ntpcb.com'
@@ -43779,6 +43778,7 @@ payload:
   - '+.qtvcd.com'
   - '+.qtx.com'
   - '+.qtyd.com'
+  - '+.qtymyy.com'
   - '+.qu.la'
   - '+.qu02.com'
   - '+.qu247.com'
