--- a/directbak.yaml
+++ b/directbak.yaml
@@ -6875,7 +6875,6 @@ payload:
   - '+.99weiqi.com'
   - '+.99wuxian.com'
   - '+.99xr.com'
-  - '+.99xxg.com'
   - '+.99xyx.com'
   - '+.99yoo.com'
   - '+.99youmeng.com'
@@ -7552,7 +7551,6 @@ payload:
   - '+.ahudows.com'
   - '+.ahugeship.com'
   - '+.ahuyi.com'
-  - '+.ahwkdz.com'
   - '+.ahwwnews.com'
   - '+.ahwxcs.com'
   - '+.ahxwkj.com'
@@ -7783,6 +7781,7 @@ payload:
   - '+.airchinamedia.com'
   - '+.aircn.org'
   - '+.aircourses.com'
+  - '+.airdoc.com'
   - '+.airdropin.com'
   - '+.airen1314.com'
   - '+.airj.website'
@@ -7844,6 +7843,7 @@ payload:
   - '+.aiuxstudio.com'
   - '+.aiviy.com'
   - '+.aiviysoft.com'
+  - '+.aivote.com'
   - '+.aiwall.com'
   - '+.aiwan4399.com'
   - '+.aiwan91.com'
@@ -10370,6 +10370,7 @@ payload:
   - '+.bgsdyz.com'
   - '+.bgteach.com'
   - '+.bguai.com'
+  - '+.bgwcsz.com'
   - '+.bgwl.net'
   - '+.bgyfhyx.com'
   - '+.bh.sb'
@@ -13854,6 +13855,7 @@ payload:
   - '+.chinagiftsfair.com'
   - '+.chinagoldcoin.net'
   - '+.chinagoldgroup.com'
+  - '+.chinagongcheng.com'
   - '+.chinagov.pw'
   - '+.chinagp.net'
   - '+.chinagps.cc'
@@ -16726,6 +16728,7 @@ payload:
   - '+.cyudun.net'
   - '+.cyuew.com'
   - '+.cywetc.com'
+  - '+.cywyjj.com'
   - '+.cyy18.com'
   - '+.cyypscl.com'
   - '+.cyyself.name'
@@ -26845,7 +26848,6 @@ payload:
   - '+.hoverlees.com'
   - '+.hovertree.com'
   - '+.hovfree.com'
-  - '+.how234.com'
   - '+.howardwchen.com'
   - '+.howbuy.com'
   - '+.howelllighting.com'
@@ -27706,6 +27708,7 @@ payload:
   - '+.huodongjia.com'
   - '+.huodongju.com'
   - '+.huodongju.net'
+  - '+.huodongpro.com'
   - '+.huodongquan.net'
   - '+.huodongshu.com'
   - '+.huodongwang.com'
@@ -28507,6 +28510,7 @@ payload:
   - '+.icslx.com'
   - '+.icsoc.net'
   - '+.icson.com'
+  - '+.icspec.com'
   - '+.icss.me'
   - '+.icstreet.com'
   - '+.icswb.com'
@@ -29781,6 +29785,7 @@ payload:
   - '+.ismdeep.com'
   - '+.isme.pub'
   - '+.isming.me'
+  - '+.ismx8.com'
   - '+.iso-est.com'
   - '+.iso-iso9000.com'
   - '+.isobar.tech'
@@ -34321,6 +34326,7 @@ payload:
   - '+.lantinglou.com'
   - '+.lanuss.com'
   - '+.lanvige.com'
+  - '+.lanwoncloudfilm.com'
   - '+.lanxicy.com'
   - '+.lanxinbase.com'
   - '+.lanxiniu.com'
@@ -37232,6 +37238,7 @@ payload:
   - '+.mcchcdn.com'
   - '+.mcchina.com'
   - '+.mcchou.com'
+  - '+.mcd.blue'
   - '+.mcd.cc'
   - '+.mcdchina.net'
   - '+.mcdsusan.com'
@@ -37770,7 +37777,6 @@ payload:
   - '+.miaostreet.com'
   - '+.miaov.com'
   - '+.miaoweijianfei.com'
-  - '+.miaowugo.com'
   - '+.miaowutech.com'
   - '+.miaoxiazai.com'
   - '+.miaozao.com'
@@ -38565,7 +38571,6 @@ payload:
   - '+.morewiscloud.com'
   - '+.morigames.com'
   - '+.morihei.net'
-  - '+.moring.pw'
   - '+.morketing.com'
   - '+.morning.work'
   - '+.morningcore.com'
@@ -40907,7 +40912,6 @@ payload:
   - '+.orz.asia'
   - '+.orz123.com'
   - '+.orz520.com'
-  - '+.orzice.com'
   - '+.orzjoy.com'
   - '+.os-easy.com'
   - '+.os-v.com'
@@ -42318,7 +42322,6 @@ payload:
   - '+.ppxs.net'
   - '+.ppxvod.com'
   - '+.ppxwo.com'
-  - '+.ppxzy.co'
   - '+.ppys.net'
   - '+.ppzhan.com'
   - '+.ppzhilian.com'
@@ -48809,7 +48812,6 @@ payload:
   - '+.suningcloud.com'
   - '+.suningestate.com'
   - '+.suningholdings.com'
-  - '+.sunjidong.net'
   - '+.sunjiwen.com'
   - '+.sunjs.com'
   - '+.sunland.cc'
@@ -55266,7 +55268,6 @@ payload:
   - '+.woaifanyi.com'
   - '+.woaihaoyouxi.com'
   - '+.woaihuahua.com'
-  - '+.woaipj.com'
   - '+.woaipu.com'
   - '+.woair.com'
   - '+.woaishouban.com'
@@ -57912,7 +57913,6 @@ payload:
   - '+.xoliao.com'
   - '+.xooooa.com'
   - '+.xorpay.com'
-  - '+.xoveskincare.com'
   - '+.xox8688.com'
   - '+.xox8995.com'
   - '+.xox9325.com'
@@ -57963,7 +57963,6 @@ payload:
   - '+.xqsbw.com'
   - '+.xqship.com'
   - '+.xqtesting.com'
-  - '+.xqwggg.com'
   - '+.xqwww.com'
   - '+.xqyk024.com'
   - '+.xrcch.com'
