--- a/directbak.yaml
+++ b/directbak.yaml
@@ -14660,7 +14660,6 @@ payload:
   - '+.citics.com'
   - '+.citicsf.com'
   - '+.citicsinfo.com'
-  - '+.citicsqh.com'
   - '+.citicsteel.com'
   - '+.citidigital.com'
   - '+.citisa.org'
@@ -16685,7 +16684,6 @@ payload:
   - '+.cycoi.com'
   - '+.cycoo.com'
   - '+.cydiakk.com'
-  - '+.cydiami.com'
   - '+.cydow.com'
   - '+.cydp5.com'
   - '+.cyedu.org'
@@ -32132,7 +32130,6 @@ payload:
   - '+.jszygs.com'
   - '+.jt-yun.com'
   - '+.jt62.com'
-  - '+.jt996.com'
   - '+.jtamc.com'
   - '+.jtbole.com'
   - '+.jtbtech.com'
@@ -43440,7 +43437,6 @@ payload:
   - '+.qiyukf.com'
   - '+.qiyukf.net'
   - '+.qiyukid.com'
-  - '+.qiyunbook.com'
   - '+.qiyuntong.com'
   - '+.qiyunworld.com'
   - '+.qiyutianxia.com'
@@ -46915,7 +46911,6 @@ payload:
   - '+.shu-ju.net'
   - '+.shu163.com'
   - '+.shuabuapp.com'
-  - '+.shuadanfu.com'
   - '+.shuaibo.wang'
   - '+.shuaigeshe.com'
   - '+.shuaihuajun.com'
@@ -46979,7 +46974,6 @@ payload:
   - '+.shuhegroup.com'
   - '+.shuhua66.com'
   - '+.shuhuangla.com'
-  - '+.shui-mai.com'
   - '+.shui.moe'
   - '+.shui12366.com'
   - '+.shui2014.com'
@@ -52073,7 +52067,6 @@ payload:
   - '+.ublese.com'
   - '+.ubmconlinereg.com'
   - '+.uboat100.com'
-  - '+.ubooo.com'
   - '+.uboxol.com'
   - '+.uboxsale.com'
   - '+.ubs001.com'
@@ -55931,7 +55924,6 @@ payload:
   - '+.www.volvocars.com'
   - '+.www1.djicdn.com'
   - '+.www2.djicdn.com'
-  - '+.www2011india.com'
   - '+.www3.djicdn.com'
   - '+.www37430.com'
   - '+.www4.djicdn.com'
@@ -59769,7 +59761,6 @@ payload:
   - '+.yiyuantian.com'
   - '+.yiyuanyi.org'
   - '+.yiyuetop.com'
-  - '+.yiyult.com'
   - '+.yiyum.com'
   - '+.yiyurumen.com'
   - '+.yizaoyiwan.com'
@@ -61849,6 +61840,7 @@ payload:
   - '+.zgglyun.com'
   - '+.zggonglue.com'
   - '+.zggqzp.com'
+  - '+.zggua.com'
   - '+.zggx.net'
   - '+.zggys.com'
   - '+.zghde.com'
