--- a/directbak.yaml
+++ b/directbak.yaml
@@ -52,7 +52,6 @@ payload:
   - '+.00cdn.com'
   - '+.00cha.com'
   - '+.00cha.net'
-  - '+.00dyun.xyz'
   - '+.00ic.com'
   - '+.00it.net'
   - '+.00lewen.com'
@@ -547,7 +546,6 @@ payload:
   - '+.0852job.com'
   - '+.0853rc.com'
   - '+.0854job.com'
-  - '+.0855job.com'
   - '+.0856job.com'
   - '+.0857job.com'
   - '+.0859job.com'
@@ -1020,8 +1018,6 @@ payload:
   - '+.123aoe.com'
   - '+.123baofeng.com'
   - '+.123bo.com'
-  - '+.123buyu.com'
-  - '+.123buyu.net'
   - '+.123cha.com'
   - '+.123ds.org'
   - '+.123du.cc'
@@ -2532,6 +2528,7 @@ payload:
   - '+.324.com'
   - '+.3259.com'
   - '+.326pay.com'
+  - '+.3280.com'
   - '+.32800.com'
   - '+.328f.com'
   - '+.328vip.com'
@@ -2867,7 +2864,6 @@ payload:
   - '+.365htk.com'
   - '+.365huaer.com'
   - '+.365huifu.com'
-  - '+.365huo.com'
   - '+.365ibank.com'
   - '+.365icl.com'
   - '+.365ime.com'
@@ -2904,7 +2900,6 @@ payload:
   - '+.365xxy.com'
   - '+.365yg.com'
   - '+.365you.com'
-  - '+.365zzd.com'
   - '+.3663.com'
   - '+.366300.com'
   - '+.366ec.com'
@@ -3182,7 +3177,6 @@ payload:
   - '+.3s001.com'
   - '+.3s3w.com'
   - '+.3s78.com'
-  - '+.3sbase.com'
   - '+.3scard.com'
   - '+.3shuwu.com'
   - '+.3snews.net'
@@ -6062,7 +6056,6 @@ payload:
   - '+.888ppt.com'
   - '+.888rj.com'
   - '+.8890tu.com'
-  - '+.8898wz.com'
   - '+.88995799.com'
   - '+.88999.com'
   - '+.8899yyy.vip'
@@ -6734,6 +6727,7 @@ payload:
   - '+.98654.com'
   - '+.987.com'
   - '+.9871.org'
+  - '+.9873.com'
   - '+.987app.com'
   - '+.987jx.com'
   - '+.987jx.net'
@@ -8428,7 +8422,6 @@ payload:
   - '+.annto.com'
   - '+.anoah.com'
   - '+.anonym-hi.com'
-  - '+.anoob.icu'
   - '+.anorectal.net'
   - '+.anosmcloud.com'
   - '+.anoyi.com'
@@ -8441,7 +8434,6 @@ payload:
   - '+.anquanke.com'
   - '+.anquanquan.info'
   - '+.anquantong.com'
-  - '+.anquanxia.com'
   - '+.anrayer.com'
   - '+.anren.org'
   - '+.anrenmind.com'
@@ -12132,7 +12124,6 @@ payload:
   - '+.cali-light.com'
   - '+.calibur.tv'
   - '+.callda.com'
-  - '+.callmewhy.com'
   - '+.callmyfun.com'
   - '+.caloinfo.com'
   - '+.calorietech.com'
@@ -13376,7 +13367,6 @@ payload:
   - '+.chenfan.info'
   - '+.cheng-nuo.com'
   - '+.cheng-sen.com'
-  - '+.cheng95.com'
   - '+.chengadx.com'
   - '+.chengchuanren.com'
   - '+.chengdebank.com'
@@ -13412,7 +13402,6 @@ payload:
   - '+.chengxiangqian.com'
   - '+.chengxinyouxuan.com'
   - '+.chengxuan.com'
-  - '+.chengyangnews.com'
   - '+.chengyangyang.com'
   - '+.chengye-capital.com'
   - '+.chengyucd.com'
@@ -13476,7 +13465,6 @@ payload:
   - '+.cheshouye.com'
   - '+.chesthospital.com'
   - '+.chesudi.com'
-  - '+.chesusu.com'
   - '+.chetuanwang.net'
   - '+.chetuobang.com'
   - '+.chetx.com'
@@ -13563,7 +13551,6 @@ payload:
   - '+.china-ceco.com'
   - '+.china-ced.com'
   - '+.china-cfa.org'
-  - '+.china-changjiang.net'
   - '+.china-channel.com'
   - '+.china-chuwei.com'
   - '+.china-cicc.org'
@@ -15457,6 +15444,7 @@ payload:
   - '+.cnrceo.com'
   - '+.cnrcloudfm.com'
   - '+.cnrdm.com'
+  - '+.cnrdn.com'
   - '+.cnreagent.com'
   - '+.cnree.com'
   - '+.cnrencai.com'
@@ -15837,7 +15825,6 @@ payload:
   - '+.cooffee.net'
   - '+.cooh5.com'
   - '+.coohua.com'
-  - '+.cookbookchina.com'
   - '+.cookcai.com'
   - '+.cookie4you.com'
   - '+.cool-admin.com'
@@ -17785,7 +17772,6 @@ payload:
   - '+.dgjyw.com'
   - '+.dglpool.com'
   - '+.dgmama.net'
-  - '+.dgmmbb.com'
   - '+.dgn.cc'
   - '+.dgod.net'
   - '+.dgptjob.com'
@@ -20392,7 +20378,6 @@ payload:
   - '+.ertmineq.com'
   - '+.ertongkongjian.com'
   - '+.ertongtuku.com'
-  - '+.ertongyouleshebei.com'
   - '+.ertoutiao.com'
   - '+.erun360.com'
   - '+.erutluv.com'
@@ -20600,7 +20585,6 @@ payload:
   - '+.evzhidao.com'
   - '+.ew9z.com'
   - '+.ewaga.com'
-  - '+.ewaiyou.com'
   - '+.ewang.com'
   - '+.ewanshang.com'
   - '+.ewarecomputer.com'
@@ -20873,6 +20857,7 @@ payload:
   - '+.faipod.com'
   - '+.fairguard.net'
   - '+.fairguard.tech'
+  - '+.fairhr.com'
   - '+.fairygui.com'
   - '+.fairysoftware.com'
   - '+.fairytest.com'
@@ -21048,7 +21033,6 @@ payload:
   - '+.fanwen118.com'
   - '+.fanwenbaike.com'
   - '+.fanwenq.com'
-  - '+.fanwenvip.com'
   - '+.fanwenzhan.com'
   - '+.fanxian.com'
   - '+.fanxiang.com'
@@ -21969,7 +21953,6 @@ payload:
   - '+.fovmy.com'
   - '+.fox-studio.net'
   - '+.fox008.com'
-  - '+.fox688.com'
   - '+.fox800.xyz'
   - '+.foxconn.com'
   - '+.foxera.com'
@@ -22879,7 +22862,6 @@ payload:
   - '+.gdsdwan.com'
   - '+.gdsincom.com'
   - '+.gdslwl.com'
-  - '+.gdsoq.com'
   - '+.gdsports.net'
   - '+.gdsrcw.com'
   - '+.gdssl.image-gmkt.com'
@@ -23538,7 +23520,6 @@ payload:
   - '+.goldentom.com'
   - '+.goldgrid.com'
   - '+.goldhoe.com'
-  - '+.goldke.com'
   - '+.goldlvshi.com'
   - '+.goldmantis.com'
   - '+.goldmarkrealestate.com'
@@ -24678,7 +24659,6 @@ payload:
   - '+.hack520.com'
   - '+.hack99.com'
   - '+.hackav.com'
-  - '+.hackcn.net'
   - '+.hackdig.com'
   - '+.hackerav.com'
   - '+.hackernews.cc'
@@ -25936,6 +25916,7 @@ payload:
   - '+.heyguo.com'
   - '+.heyi.com'
   - '+.heyinguanli.com'
+  - '+.heymeo.net'
   - '+.heymore.com'
   - '+.heyou51.com'
   - '+.heyplus.com'
@@ -27327,6 +27308,7 @@ payload:
   - '+.huasimtour.com'
   - '+.huasyun.com'
   - '+.huatai-pb.com'
+  - '+.huatai1993.com'
   - '+.huatengsci.com'
   - '+.huati365.com'
   - '+.huatian.net'
@@ -29048,7 +29030,6 @@ payload:
   - '+.iliangcang.com'
   - '+.ilibrand.com'
   - '+.ilidubj.net'
-  - '+.ilife69.com'
   - '+.ilifesmart.com'
   - '+.ilinekesy.com'
   - '+.ilingdai.com'
@@ -29631,6 +29612,7 @@ payload:
   - '+.iprtop.com'
   - '+.iprun.com'
   - '+.ips8.com'
+  - '+.ipshudi.com'
   - '+.ipssh.net'
   - '+.iptalent.com'
   - '+.iptrm.com'
@@ -30948,7 +30930,6 @@ payload:
   - '+.jie518.com'
   - '+.jiebaodz.com'
   - '+.jiecao.com'
-  - '+.jiechupm.com'
   - '+.jiedaibao.com'
   - '+.jiediankeji.com'
   - '+.jiedianqian.com'
@@ -31981,7 +31962,6 @@ payload:
   - '+.jsbc.com'
   - '+.jsbexam.com'
   - '+.jsbgj.com'
-  - '+.jscdn.host'
   - '+.jsceou.com'
   - '+.jsche.net'
   - '+.jschunxing.com'
@@ -32751,6 +32731,7 @@ payload:
   - '+.kaiyuangroup.cc'
   - '+.kaiyuanhi.com'
   - '+.kaiyuanhotels.com'
+  - '+.kaiyun.com'
   - '+.kajicam.com'
   - '+.kaka.com'
   - '+.kaka3.com'
@@ -34352,6 +34333,7 @@ payload:
   - '+.lanzouw.com'
   - '+.lanzoux.com'
   - '+.lanzouy.com'
+  - '+.lanzouz.com'
   - '+.lanzun.net'
   - '+.lao9123.com'
   - '+.laob.me'
@@ -35731,7 +35713,6 @@ payload:
   - '+.lls.moe'
   - '+.llsapp.com'
   - '+.llscdn.com'
-  - '+.llscript.com'
   - '+.llsops.com'
   - '+.llsserver.com'
   - '+.llssite.com'
@@ -35956,7 +35937,6 @@ payload:
   - '+.longsunhenges.com'
   - '+.longsys.com'
   - '+.longtaifoods.com'
-  - '+.longtaitouxiaoshuo.com'
   - '+.longtaiwj.com'
   - '+.longtanshuw.net'
   - '+.longtask.com'
@@ -36567,7 +36547,6 @@ payload:
   - '+.lyjunshi.com'
   - '+.lyjxwl.com'
   - '+.lykxm.com'
-  - '+.lylryy.com'
   - '+.lymil.com'
   - '+.lynkco.com'
   - '+.lynlzqy.com'
@@ -38750,6 +38729,7 @@ payload:
   - '+.mt-bbs.com'
   - '+.mt-wire.com'
   - '+.mt77.com'
+  - '+.mt888vip.com'
   - '+.mtasia.net'
   - '+.mtavip.com'
   - '+.mtblj.com'
@@ -39769,7 +39749,6 @@ payload:
   - '+.nhganggeban.com'
   - '+.nhhwhxh.com'
   - '+.nhnexpo.com'
-  - '+.nhnsc.com'
   - '+.nhnst.com'
   - '+.nhooo.com'
   - '+.nhstu.com'
@@ -40316,6 +40295,8 @@ payload:
   - '+.nvidia-china.com'
   - '+.nvliren.com'
   - '+.nvloo.com'
+  - '+.nvpuse.com'
+  - '+.nvpuwo.com'
   - '+.nvren55.com'
   - '+.nvsay.com'
   - '+.nvsheng.com'
@@ -40808,7 +40789,6 @@ payload:
   - '+.openresty.com'
   - '+.openresty.org'
   - '+.openrice.com'
-  - '+.opensc.co'
   - '+.openset.wang'
   - '+.opensoce.com'
   - '+.openthos.com'
@@ -41488,7 +41468,6 @@ payload:
   - '+.pdf1122.com'
   - '+.pdf5.net'
   - '+.pdfbianji.com'
-  - '+.pdfdo.com'
   - '+.pdfdowell.com'
   - '+.pdfexpert.cc'
   - '+.pdffsy.com'
@@ -41878,7 +41857,6 @@ payload:
   - '+.pinguo.us'
   - '+.pingwest.com'
   - '+.pingxiaow.com'
-  - '+.pingxonline.com'
   - '+.pingxuan123.com'
   - '+.pingxx.com'
   - '+.pingyin.cc'
@@ -42500,6 +42478,7 @@ payload:
   - '+.purecpp.org'
   - '+.pureh2b.com'
   - '+.purenyy.com'
+  - '+.purewhite.io'
   - '+.puronglong.com'
   - '+.pusa123.com'
   - '+.push2u.com'
@@ -44220,7 +44199,6 @@ payload:
   - '+.rail-transit.com'
   - '+.railcn.net'
   - '+.rails365.net'
-  - '+.railwayfan.net'
   - '+.rain8.com'
   - '+.rainasmoon.com'
   - '+.rainbond.com'
@@ -45167,6 +45145,7 @@ payload:
   - '+.s1979.com'
   - '+.s1craft.com'
   - '+.s2185.com'
+  - '+.s2ceda.com'
   - '+.s2cinc.com'
   - '+.s4g5.com'
   - '+.s4yd.com'
@@ -45316,8 +45295,6 @@ payload:
   - '+.sankaijian.com'
   - '+.sankgo.com'
   - '+.sankougift.com'
-  - '+.sankoup.com'
-  - '+.sankoup1.com'
   - '+.sankuai.com'
   - '+.sanlan123.com'
   - '+.sanliu2021.com'
@@ -45824,7 +45801,6 @@ payload:
   - '+.seekfunbook.com'
   - '+.seekhill.com'
   - '+.seekonly.net'
-  - '+.seekplay.online'
   - '+.seelvyou.com'
   - '+.seemmo.com'
   - '+.seemoread.com'
@@ -47873,7 +47849,6 @@ payload:
   - '+.snto.com'
   - '+.snupg.com'
   - '+.snxfcw.com'
-  - '+.snxiaowai.com'
   - '+.snxw.com'
   - '+.snyu.com'
   - '+.snzfj.net'
@@ -48183,7 +48158,6 @@ payload:
   - '+.soushuking.com'
   - '+.sousou.com'
   - '+.sousoudus.com'
-  - '+.sousouyixia.com'
   - '+.sousuoyouxi.com'
   - '+.soutaowang.com'
   - '+.southbeauty.com'
@@ -48913,7 +48887,6 @@ payload:
   - '+.superzl.com'
   - '+.supesite.com'
   - '+.supesoft.com'
-  - '+.supfast.net'
   - '+.suplaymart.com'
   - '+.supmeter.com'
   - '+.supmil.com'
@@ -50650,7 +50623,6 @@ payload:
   - '+.tinghen.com'
   - '+.tingjiandan.com'
   - '+.tingke8.com'
-  - '+.tingliku.com'
   - '+.tingmall.com'
   - '+.tingmimi.net'
   - '+.tingniukeji.com'
@@ -51969,7 +51941,6 @@ payload:
   - '+.tzfdc.com'
   - '+.tzfeize.xyz'
   - '+.tzfile.com'
-  - '+.tzfuke.com'
   - '+.tzgcjie.com'
   - '+.tzhubo.com'
   - '+.tzhwcc.com'
@@ -53386,7 +53357,6 @@ payload:
   - '+.vwvvwv.com'
   - '+.vwwmsd.com'
   - '+.vx.com'
-  - '+.vx888.net'
   - '+.vxia.net'
   - '+.vxiaocheng.com'
   - '+.vxiaoxin.com'
@@ -55279,7 +55249,6 @@ payload:
   - '+.wodavip.com'
   - '+.wodcloud.com'
   - '+.wode.im'
-  - '+.wode20.com'
   - '+.wodeabc.com'
   - '+.wodecrowd.com'
   - '+.wodedagong.com'
@@ -57289,7 +57258,6 @@ payload:
   - '+.xingzhang.com'
   - '+.xingzhige.com'
   - '+.xingzhilan.com'
-  - '+.xingzhilian.net'
   - '+.xingzhiyue.com'
   - '+.xingzuo.com'
   - '+.xingzuo8090.com'
@@ -57504,7 +57472,6 @@ payload:
   - '+.xitong-tech.com'
   - '+.xitong110.com'
   - '+.xitong520.com'
-  - '+.xitong8.com'
   - '+.xitongbuluo.com'
   - '+.xitongcheng.com'
   - '+.xitongdaquan.net'
@@ -58558,7 +58525,6 @@ payload:
   - '+.xz6699.com'
   - '+.xz7.com'
   - '+.xzapi56.com'
-  - '+.xzbu.com'
   - '+.xzcblog.com'
   - '+.xzcdc.com'
   - '+.xzddx.com'
@@ -59565,7 +59531,6 @@ payload:
   - '+.yinzhaowang.com'
   - '+.yinzhijie.com'
   - '+.yinzifang.com'
-  - '+.yinziji.com'
   - '+.yinzuo100.com'
   - '+.yinzuojianshen.com'
   - '+.yioho.com'
@@ -61299,6 +61264,7 @@ payload:
   - '+.yxyfhgc.com'
   - '+.yxyzjx.com'
   - '+.yxz.me'
+  - '+.yxzb.tv'
   - '+.yxzd.info'
   - '+.yxzxgy.com'
   - '+.yy-xjy.com'
@@ -62615,7 +62581,6 @@ payload:
   - '+.zhongleduo.net'
   - '+.zhongleny.com'
   - '+.zhonglian.com'
-  - '+.zhonglianfactoring.com'
   - '+.zhongliangxny.com'
   - '+.zhonglianhuashu.com'
   - '+.zhongliucls.com'
