--- a/directbak.yaml
+++ b/directbak.yaml
@@ -1282,7 +1282,6 @@ payload:
   - '+.16466.com'
   - '+.165123.com'
   - '+.16587.com'
-  - '+.16595.com'
   - '+.166.com'
   - '+.166.net'
   - '+.166161.com'
@@ -1981,7 +1980,6 @@ payload:
   - '+.21our.com'
   - '+.21qa.net'
   - '+.21qphr.com'
-  - '+.21rcw.com'
   - '+.21rv.com'
   - '+.21shhr.com'
   - '+.21shipin.com'
@@ -2193,7 +2191,6 @@ payload:
   - '+.256app.com'
   - '+.25752.com'
   - '+.258288.com'
-  - '+.25838yn.com'
   - '+.25847.com'
   - '+.25863.com'
   - '+.2588qq.com'
@@ -4031,6 +4028,7 @@ payload:
   - '+.51world.win'
   - '+.51wp.com'
   - '+.51wtp.com'
+  - '+.51wuditu.com'
   - '+.51wxjz.com'
   - '+.51wydj.com'
   - '+.51wyfl.com'
@@ -4719,7 +4717,6 @@ payload:
   - '+.59di.com'
   - '+.59dun.com'
   - '+.59edu.com'
-  - '+.59hs.com'
   - '+.59iedu.com'
   - '+.59ni.com'
   - '+.59pk.net'
@@ -7437,7 +7434,6 @@ payload:
   - '+.agefans.app'
   - '+.agenge.com'
   - '+.agenow.com'
-  - '+.agentzh.org'
   - '+.aghcdn.com'
   - '+.agile-china.com'
   - '+.agileex.com'
@@ -7683,7 +7679,6 @@ payload:
   - '+.aijishu.com'
   - '+.aiju.com'
   - '+.aik.com'
-  - '+.aikac.com'
   - '+.aikaixin.com'
   - '+.aikaiyuan.com'
   - '+.aikan8.com'
@@ -7887,7 +7882,6 @@ payload:
   - '+.aizhengli.com'
   - '+.aizhenrong.com'
   - '+.aizhet.com'
-  - '+.aizhi.biz'
   - '+.aizhibaby.com'
   - '+.aizhuizhui.com'
   - '+.aiziti.net'
@@ -8777,6 +8771,7 @@ payload:
   - '+.aptenon.com'
   - '+.apusic.com'
   - '+.apxm.net'
+  - '+.apxnlw.com'
   - '+.aqara.com'
   - '+.aqb.so'
   - '+.aqbxcdn9.com'
@@ -8862,6 +8857,7 @@ payload:
   - '+.armchina.com'
   - '+.armsword.com'
   - '+.armystar.com'
+  - '+.armzl.com'
   - '+.arnaz-on-co-jp.icu'
   - '+.arocmag.com'
   - '+.arongsoft.com'
@@ -9895,7 +9891,6 @@ payload:
   - '+.bbchin.com'
   - '+.bbcss.com'
   - '+.bbctop.com'
-  - '+.bbcyw.com'
   - '+.bbdservice.com'
   - '+.bbdup.com'
   - '+.bbercn.com'
@@ -11443,7 +11438,6 @@ payload:
   - '+.boyuonline.com'
   - '+.bozhihua.com'
   - '+.bozhong.com'
-  - '+.bozhou666.com'
   - '+.bphetaomiao.com'
   - '+.bpimg.com'
   - '+.bppan.com'
@@ -13304,7 +13298,6 @@ payload:
   - '+.checkip.pw'
   - '+.checkoo.com'
   - '+.checkpass.net'
-  - '+.chedan5.com'
   - '+.chediandian.com'
   - '+.cheduo.com'
   - '+.cheerfun.dev'
@@ -14366,7 +14359,6 @@ payload:
   - '+.chuangchangnet.com'
   - '+.chuangchenwangluo.com'
   - '+.chuangcifang.com'
-  - '+.chuangd.com'
   - '+.chuangduyouyue.com'
   - '+.chuangen.com'
   - '+.chuangfeixin.com'
@@ -14965,7 +14957,6 @@ payload:
   - '+.cmskcrm.com'
   - '+.cmsn.biz'
   - '+.cmstop.com'
-  - '+.cmt178.com'
   - '+.cmt7.com'
   - '+.cmtdi.com'
   - '+.cmtech.net'
@@ -15360,7 +15351,6 @@ payload:
   - '+.cnmsn.net'
   - '+.cnmstl.net'
   - '+.cnmtpt.com'
-  - '+.cnmxk.com'
   - '+.cnmysql.com'
   - '+.cnnaihuo.com'
   - '+.cnnb.com'
@@ -15547,6 +15537,7 @@ payload:
   - '+.cnxklm.com'
   - '+.cnxnmy.com'
   - '+.cnxuntu.com'
+  - '+.cnxzm.com'
   - '+.cnyanglao.com'
   - '+.cnyicheng.com'
   - '+.cnyings.com'
@@ -16121,7 +16112,6 @@ payload:
   - '+.cqxyfl.com'
   - '+.cqyc.net'
   - '+.cqyestar.com'
-  - '+.cqyeze.com'
   - '+.cqyfgs.com'
   - '+.cqyingang.com'
   - '+.cqyouloft.com'
@@ -16625,6 +16615,7 @@ payload:
   - '+.cxzw.com'
   - '+.cy-cdn.com'
   - '+.cy-email.com'
+  - '+.cy-isp.net'
   - '+.cy.com'
   - '+.cy1990.com'
   - '+.cy2009.com'
@@ -16812,6 +16803,7 @@ payload:
   - '+.d7ol.com'
   - '+.d7vg.com'
   - '+.d8th.com'
+  - '+.d9ym.com'
   - '+.da-qian.com'
   - '+.da-quan.net'
   - '+.da.anythinktech.com'
@@ -17652,6 +17644,7 @@ payload:
   - '+.devzeng.com'
   - '+.dewmobile.net'
   - '+.dewu.com'
+  - '+.dewu.net'
   - '+.dewucdn.com'
   - '+.dewumall.com'
   - '+.dexian.mobi'
@@ -17979,7 +17972,6 @@ payload:
   - '+.dididapiao.com'
   - '+.dididawo.com'
   - '+.dididi88.com'
-  - '+.didiling.com'
   - '+.didipay.com'
   - '+.didiqiche.com'
   - '+.didispace.com'
@@ -18856,6 +18848,7 @@ payload:
   - '+.dripcar.com'
   - '+.driverdevelop.com'
   - '+.drivergenius.com'
+  - '+.drivers.amd.com'
   - '+.driverzeng.com'
   - '+.drivethelife.com'
   - '+.drli.group'
@@ -19663,6 +19656,7 @@ payload:
   - '+.echinatobacco.com'
   - '+.echo-isoftstone.com'
   - '+.echo188.com'
+  - '+.echodns.xyz'
   - '+.echoing.tech'
   - '+.echoteen.com'
   - '+.echuandan.com'
@@ -21345,7 +21339,6 @@ payload:
   - '+.fengji.net'
   - '+.fengjing.com'
   - '+.fengjr.com'
-  - '+.fengjunzi.com'
   - '+.fengkongcloud.com'
   - '+.fengkuangzaoren.com'
   - '+.fengkui.net'
@@ -21362,7 +21355,6 @@ payload:
   - '+.fengone.com'
   - '+.fengpengjun.com'
   - '+.fengpintech.com'
-  - '+.fengqu.com'
   - '+.fengread.com'
   - '+.fengshangweekly.com'
   - '+.fengshi.tech'
@@ -21495,6 +21487,7 @@ payload:
   - '+.fhycs.com'
   - '+.fhyx.com'
   - '+.fhyx.hk'
+  - '+.fhyx.online'
   - '+.fi1818.com'
   - '+.fi94.com'
   - '+.fiberhome.com'
@@ -22304,6 +22297,7 @@ payload:
   - '+.fxlbb.com'
   - '+.fxltsbl.com'
   - '+.fxm.so'
+  - '+.fxngpih.com'
   - '+.fxo2opt.com'
   - '+.fxpan.com'
   - '+.fxsw.net'
@@ -23092,6 +23086,7 @@ payload:
   - '+.ggemo.com'
   - '+.ggerg.com'
   - '+.ggeye.com'
+  - '+.ggg868.com'
   - '+.gggqa.com'
   - '+.ggj88.com'
   - '+.ggjrw.com'
@@ -26496,7 +26491,6 @@ payload:
   - '+.hnshengben.com'
   - '+.hnsimeng.com'
   - '+.hnsiwei.com'
-  - '+.hnsjxcl.com'
   - '+.hnsktc.com'
   - '+.hnsmj.org'
   - '+.hnsqtg.com'
@@ -28660,6 +28654,7 @@ payload:
   - '+.iegee.net'
   - '+.iegourl.com'
   - '+.iejiu.com'
+  - '+.ieltsabc.com'
   - '+.ieltschn.com'
   - '+.iemblog.com'
   - '+.iemiq.com'
@@ -31670,7 +31665,6 @@ payload:
   - '+.jnky.com'
   - '+.jnlab.com'
   - '+.jnlc.com'
-  - '+.jnliyu.com'
   - '+.jnlou.net'
   - '+.jnltwy.com'
   - '+.jnmama.com'
@@ -34387,7 +34381,6 @@ payload:
   - '+.larksuite.com'
   - '+.larmb.com'
   - '+.laruence.com'
-  - '+.laryoo.com'
   - '+.las1001boda.com'
   - '+.las88889999.com'
   - '+.lascn.net'
@@ -34771,6 +34764,7 @@ payload:
   - '+.lerye.com'
   - '+.leshanvc.com'
   - '+.leshi123.cc'
+  - '+.leshiguang.com'
   - '+.leshou.com'
   - '+.leshow.com'
   - '+.leshu.com'
@@ -36338,6 +36332,7 @@ payload:
   - '+.luxiao.com'
   - '+.luxiwang.com'
   - '+.luxiyun.com'
+  - '+.luxshare-ict.com'
   - '+.luxst.com'
   - '+.luxtarget.com'
   - '+.luxuqing.com'
@@ -37982,8 +37977,6 @@ payload:
   - '+.minhow.com'
   - '+.mini-audio.com'
   - '+.mini-program.net'
-  - '+.mini5cn-1.opera-mini.net'
-  - '+.mini5cn.opera-mini.net'
   - '+.miniadx.com'
   - '+.miniaixue.com'
   - '+.miniappss.com'
@@ -40752,8 +40745,6 @@ payload:
   - '+.openos.org'
   - '+.openqa.com'
   - '+.openredcloud.com'
-  - '+.openresty.com'
-  - '+.openresty.org'
   - '+.openrice.com'
   - '+.openset.wang'
   - '+.opensoce.com'
@@ -42323,6 +42314,7 @@ payload:
   - '+.prolto.com'
   - '+.promisingedu.com'
   - '+.promoadx.com'
+  - '+.pronax.tech'
   - '+.propsad.com'
   - '+.proresearch.org'
   - '+.prositsole.com'
@@ -42660,7 +42652,6 @@ payload:
   - '+.qdccb.com'
   - '+.qdccdl.com'
   - '+.qdcdpjw.com'
-  - '+.qdcent.com'
   - '+.qdcu.com'
   - '+.qdcypf.com'
   - '+.qdcz.com'
@@ -42898,7 +42889,6 @@ payload:
   - '+.qianluxiaoshuo.com'
   - '+.qianmaiapp.com'
   - '+.qianmaidao.com'
-  - '+.qianmh.com'
   - '+.qianmi.com'
   - '+.qianmingyun.com'
   - '+.qianmo.info'
@@ -43504,6 +43494,7 @@ payload:
   - '+.qooic.com'
   - '+.qookar.com'
   - '+.qoqaoligei.com'
+  - '+.qoqkkhy.com'
   - '+.qosq.com'
   - '+.qp110.com'
   - '+.qp46.com'
@@ -46082,6 +46073,7 @@ payload:
   - '+.shangbaolai.com'
   - '+.shangbiao.com'
   - '+.shangbiao.store'
+  - '+.shangbiaocheng.com'
   - '+.shangboo.com'
   - '+.shangbw.com'
   - '+.shangc.net'
@@ -49360,6 +49352,7 @@ payload:
   - '+.szpclab.com'
   - '+.szpiao.com'
   - '+.szpiaoyi.com'
+  - '+.szpldq.net'
   - '+.szpmi.org'
   - '+.szpowerpms.com'
   - '+.szputy.com'
@@ -50385,6 +50378,7 @@ payload:
   - '+.tianmao.com'
   - '+.tianmaying.com'
   - '+.tianmidian.com'
+  - '+.tianmu.mobi'
   - '+.tianmupe.com'
   - '+.tianmupr.com'
   - '+.tiann90.com'
@@ -53191,7 +53185,6 @@ payload:
   - '+.vpsaa.net'
   - '+.vpsaff.com'
   - '+.vpscang.com'
-  - '+.vpsdawanjia.com'
   - '+.vpsdx.com'
   - '+.vpser.net'
   - '+.vpsjxw.com'
@@ -53641,7 +53634,6 @@ payload:
   - '+.wangzhennan.com'
   - '+.wangziru.com'
   - '+.wanh5.com'
-  - '+.wanhedoors.com'
   - '+.wanheweb.com'
   - '+.wanhi.com'
   - '+.wanhongji.com'
@@ -55559,6 +55551,7 @@ payload:
   - '+.wsoversea.info'
   - '+.wsq.cool'
   - '+.wsqejt.com'
+  - '+.wss.ink'
   - '+.wsssec.com'
   - '+.wstong.com'
   - '+.wstx.com'
@@ -55584,6 +55577,7 @@ payload:
   - '+.wtapi.com'
   - '+.wtbds.com'
   - '+.wtcxs.com'
+  - '+.wtd56.com'
   - '+.wtdex.com'
   - '+.wtdms.com'
   - '+.wting.info'
@@ -55671,7 +55665,6 @@ payload:
   - '+.wuhansailingclub.com'
   - '+.wuhantest.com'
   - '+.wuhantianqi114.com'
-  - '+.wuhantianrun.com'
   - '+.wuhantskj.com'
   - '+.wuhanunion.com'
   - '+.wuhanxingfuwan.com'
@@ -56655,6 +56648,7 @@ payload:
   - '+.xiaobaoonline.com'
   - '+.xiaobaostudio.com'
   - '+.xiaobd.net'
+  - '+.xiaobianli8.com'
   - '+.xiaobingxitong.com'
   - '+.xiaobu121.com'
   - '+.xiaocanhulian.com'
@@ -56802,6 +56796,7 @@ payload:
   - '+.xiaomingming.org'
   - '+.xiaomiqiu.com'
   - '+.xiaomiquan.com'
+  - '+.xiaomirom.com'
   - '+.xiaomishu.com'
   - '+.xiaomiwujiecao.com'
   - '+.xiaomiyoupin.com'
@@ -57909,6 +57904,7 @@ payload:
   - '+.xs.la'
   - '+.xs123.net'
   - '+.xs123.org'
+  - '+.xs163.net'
   - '+.xs2500.com'
   - '+.xs3cnc.com'
   - '+.xs52.com'
@@ -58335,7 +58331,6 @@ payload:
   - '+.xxmh223.com'
   - '+.xxmh225.com'
   - '+.xxmh226.com'
-  - '+.xxmh460.com'
   - '+.xxminizu.com'
   - '+.xxnets.net'
   - '+.xxnmcd.com'
@@ -61275,7 +61270,6 @@ payload:
   - '+.yyhh.com'
   - '+.yyhhaa.com'
   - '+.yyhn365.com'
-  - '+.yyhomer.com'
   - '+.yyjxcloud.com'
   - '+.yyjzt.com'
   - '+.yyk100.com'
@@ -61426,6 +61420,7 @@ payload:
   - '+.zaijiawan.com'
   - '+.zailouxia.com'
   - '+.zaiminglvsuo.com'
+  - '+.zainan.cc'
   - '+.zainanjing365.com'
   - '+.zaisd.com'
   - '+.zaitong.net'
@@ -63732,6 +63727,7 @@ payload:
   - '+.zuosa.com'
   - '+.zuoshangbao.com'
   - '+.zuoshipin.com'
+  - '+.zuoshouyisheng.com'
   - '+.zuotishi.com'
   - '+.zuotixia.com'
   - '+.zuowen.com'
@@ -63847,7 +63843,6 @@ payload:
   - '+.zxjg66.com'
   - '+.zxjsq.net'
   - '+.zxlib.com'
-  - '+.zxlmx.com'
   - '+.zxmall.com'
   - '+.zxmn2018.com'
   - '+.zxmseed.com'
