--- a/directbak.yaml
+++ b/directbak.yaml
@@ -763,7 +763,7 @@ payload:
   - '+.1024.com'
   - '+.1024.cool'
   - '+.1024.ink'
-  - '+.1024dmg.com'
+  - '+.1024.mx'
   - '+.1024g.com'
   - '+.1024ie.com'
   - '+.1024nic.com'
@@ -1499,6 +1499,7 @@ payload:
   - '+.17kuxun.com'
   - '+.17kxgame.com'
   - '+.17kxs8.com'
+  - '+.17lele.net'
   - '+.17lewan.net'
   - '+.17liuxue.com'
   - '+.17ll.com'
@@ -4035,7 +4036,6 @@ payload:
   - '+.51wyrc.com'
   - '+.51wzg.com'
   - '+.51wzxz.com'
-  - '+.51xbl.com'
   - '+.51xbx.com'
   - '+.51xcrc.com'
   - '+.51xiancheng.com'
@@ -5279,7 +5279,6 @@ payload:
   - '+.6miu.com'
   - '+.6miu.net'
   - '+.6miv.com'
-  - '+.6mxs.com'
   - '+.6pifa.net'
   - '+.6plat.org'
   - '+.6puppy.xyz'
@@ -5772,7 +5771,6 @@ payload:
   - '+.80kongjian.com'
   - '+.80kuku.com'
   - '+.80nb.com'
-  - '+.80note.com'
   - '+.80paper.com'
   - '+.80s.im'
   - '+.80s.tw'
@@ -6653,6 +6651,7 @@ payload:
   - '+.96dp.com'
   - '+.96go.com'
   - '+.96hq.com'
+  - '+.96jia.com'
   - '+.96jm.com'
   - '+.96jx.com'
   - '+.96kaifa.com'
@@ -7924,6 +7923,7 @@ payload:
   - '+.akeyun.com'
   - '+.akhtm.com'
   - '+.akhy.com'
+  - '+.akjianding.com'
   - '+.akkogear.com'
   - '+.akng.net'
   - '+.akniu.com'
@@ -9071,7 +9071,6 @@ payload:
   - '+.augsky.com'
   - '+.augth.com'
   - '+.augurit.com'
-  - '+.auly.com'
   - '+.aunapi.com'
   - '+.auniontech.com'
   - '+.aunload.com'
@@ -11694,6 +11693,7 @@ payload:
   - '+.buylabel.com'
   - '+.buysun.net'
   - '+.buysweet.com'
+  - '+.buyu1314.com'
   - '+.buzhi5.com'
   - '+.buzhibushi.com'
   - '+.buzzads.com'
@@ -12603,7 +12603,6 @@ payload:
   - '+.cdcz.net'
   - '+.cddgg.com'
   - '+.cddgg.net'
-  - '+.cddo8.com'
   - '+.cddscj.com'
   - '+.cddsgk.com'
   - '+.cde-os.com'
@@ -13008,7 +13007,6 @@ payload:
   - '+.cgebook.com'
   - '+.cgejournal.com'
   - '+.cger.com'
-  - '+.cgfdgre.net'
   - '+.cgiale.com'
   - '+.cgiia.com'
   - '+.cgjoy.com'
@@ -18604,6 +18602,7 @@ payload:
   - '+.door-expo.com'
   - '+.dooreb.com'
   - '+.doorhr.com'
+  - '+.doorzo.app'
   - '+.doorzo.net'
   - '+.doowinfintec.com'
   - '+.dopa.com'
@@ -19590,7 +19589,6 @@ payload:
   - '+.eblockschina.com'
   - '+.ebnew.com'
   - '+.ebocert.com'
-  - '+.ebook.name'
   - '+.ebookbao.net'
   - '+.ebookcn.com'
   - '+.ebookmen.com'
@@ -21773,7 +21771,6 @@ payload:
   - '+.fmbimg.com'
   - '+.fmcoprc.gov.mo'
   - '+.fmeibao.com'
-  - '+.fmfans.net'
   - '+.fminers.com'
   - '+.fmketang.com'
   - '+.fmpan.com'
@@ -22164,7 +22161,6 @@ payload:
   - '+.fulou.life'
   - '+.fulu.com'
   - '+.fumake.com'
-  - '+.fumanyou.cc'
   - '+.fumi.com'
   - '+.fumu.com'
   - '+.fumubang.com'
@@ -25585,6 +25581,7 @@ payload:
   - '+.hdslb.net'
   - '+.hdsx36hb.com'
   - '+.hdsx39hb.com'
+  - '+.hdsx83hb.com'
   - '+.hdtgtm.com'
   - '+.hdtmedia.com'
   - '+.hduofen.com'
@@ -29725,7 +29722,6 @@ payload:
   - '+.iskyjoy.com'
   - '+.iskylinem.com'
   - '+.iskysoft.com'
-  - '+.iskytree.net'
   - '+.iskyworth.com'
   - '+.islide.cc'
   - '+.isluo.com'
@@ -29832,6 +29828,7 @@ payload:
   - '+.itcpn.net'
   - '+.itczh.com'
   - '+.itdabao.com'
+  - '+.itdai.com'
   - '+.itdcw.com'
   - '+.itdhz.com'
   - '+.itdiffer.com'
@@ -31358,7 +31355,6 @@ payload:
   - '+.jiufawang.com'
   - '+.jiugang.com'
   - '+.jiugangbid.com'
-  - '+.jiuguanfm.com'
   - '+.jiuhuang.com'
   - '+.jiuhuar.com'
   - '+.jiuhuashan.cc'
@@ -36406,7 +36402,6 @@ payload:
   - '+.lvyestudy.com'
   - '+.lvyetong.com'
   - '+.lvyidoor.com'
-  - '+.lvyinglaw.com'
   - '+.lvyou114.com'
   - '+.lvyou521.com'
   - '+.lvyoubei.com'
@@ -37047,6 +37042,7 @@ payload:
   - '+.mashang98.com'
   - '+.mashangmai.com'
   - '+.mashangshijie.com'
+  - '+.mashiro.me'
   - '+.masjinquan.com'
   - '+.mass-evo.com'
   - '+.massclouds.com'
@@ -38736,7 +38732,6 @@ payload:
   - '+.mtrendgroup.com'
   - '+.mttsq.com'
   - '+.mtty.com'
-  - '+.mtunique.com'
   - '+.mtv123.com'
   - '+.mtw.so'
   - '+.mtwine.com'
@@ -40074,6 +40069,7 @@ payload:
   - '+.normstar.net'
   - '+.northdy.com'
   - '+.northidc.net'
+  - '+.northsoar.com'
   - '+.northtimes.com'
   - '+.nosec.org'
   - '+.nosuchfield.com'
@@ -41219,7 +41215,6 @@ payload:
   - '+.panshiyun.com'
   - '+.panshy.com'
   - '+.pansino-solutions.com'
-  - '+.pansj.cc'
   - '+.pansoso.com'
   - '+.pansou.com'
   - '+.pantrysbest.com'
@@ -43567,7 +43562,6 @@ payload:
   - '+.qqkw.net'
   - '+.qqleju.com'
   - '+.qqlin.net'
-  - '+.qqm98.com'
   - '+.qqma.com'
   - '+.qqmail.com'
   - '+.qqmcc.org'
@@ -43933,7 +43927,6 @@ payload:
   - '+.qupingce.com'
   - '+.qupuji.com'
   - '+.quqi.com'
-  - '+.quqiaoqiao.com'
   - '+.quqike.com'
   - '+.quqiuhun.com'
   - '+.ququabc.com'
@@ -45275,7 +45268,6 @@ payload:
   - '+.sanquan.com'
   - '+.sansancloud.com'
   - '+.sansanyun.com'
-  - '+.sanshengcao.com'
   - '+.sansky.net'
   - '+.santaihu.com'
   - '+.santelvxing.com'
@@ -46964,7 +46956,6 @@ payload:
   - '+.shujupie.com'
   - '+.shujutang.com'
   - '+.shujuwa.net'
-  - '+.shuke8.com'
   - '+.shukeba.com'
   - '+.shukeju.com'
   - '+.shukoe.com'
@@ -48306,6 +48297,7 @@ payload:
   - '+.srtong.com'
   - '+.srun.com'
   - '+.srw00.com'
+  - '+.srwlyx.com'
   - '+.srworld.net'
   - '+.srx3.net'
   - '+.srxww.com'
@@ -49402,6 +49394,7 @@ payload:
   - '+.szwfzs.com'
   - '+.szwgroup.com'
   - '+.szwstui.com'
+  - '+.szwtsd.com'
   - '+.szwuyukeji.com'
   - '+.szwwco.com'
   - '+.szxbyx.com'
@@ -55292,7 +55285,6 @@ payload:
   - '+.wonengxing588.com'
   - '+.wonerqu.com'
   - '+.wongcw.com'
-  - '+.wonggang.com'
   - '+.wongpeace.com'
   - '+.woniu.com'
   - '+.woniu8.com'
@@ -55375,7 +55367,6 @@ payload:
   - '+.woskj2.com'
   - '+.woso100.com'
   - '+.wosouyun.com'
-  - '+.wotobang.com'
   - '+.wotrus.com'
   - '+.wotucdn.com'
   - '+.wotula.com'
@@ -63558,7 +63549,6 @@ payload:
   - '+.zssph.com'
   - '+.zssxczxyey.com'
   - '+.zstack.io'
-  - '+.zstzs.com'
   - '+.zsucai.com'
   - '+.zsucai.net'
   - '+.zsufivehos.com'
